--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -1,250 +1,186 @@
-* 1 凡新發明具有產業上利用價值者，得依本法申請專利。
+* 1 為鼓勵、保護、利用發明與創作，以促進產業發展，特制定本法。
 
-> 釋：為鼓勵創新發明，使發明人樂於申請專利，故加修正，以示放寬。
+* 2 本法所稱專利分為下列三種：一、發明專利。二、新型專利。三、新式樣專利。
 
-* 2 本法所稱新發明，謂無左列情事之一者：一、申請前已見於刊物或已公開使用，他人可能仿效者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明核准專利在先者。三、經陳列於政府主辦或政府認可之展覽會，於開會之日起，逾六個月尚未申請專利者。四、申請專利前，大量製造，而非從事實驗者。五、運用申請前之習用技術、知識顯而易知未能增進功效者。
+* 3 本法主管機關為經濟部。前項業務由經濟部設專責機關辦理。
 
-> 釋：一、刪除第一款「在國內」三字。二、為便利引進外國專利技術，提高國內工業技術水準，吸引國外投資，爰將現行第三款刪除，並將現行第四、五款移列為第三、四款。三、發明除應具有新穎性外，尚須有進步性始准專利。如其發明為一般具備該項知識之人，顯而易知者，為習用技術之轉用，各國專利審查實務，均不予專利，乃增列第五款。
+* 4 外國人所屬之國家與中華民國如未共同參加保護專利之國際條約或無相互保護專利之條約、協定或由團體、機構互訂經經濟部核准保護專利之協議，或對中華民國國民申請專利，不予受理者，其專利申請，得不予受理。
 
-* 3 本法所稱具有產業上利用價值，謂無左列情事之一者：一、不合實用者。二、尚未達到產業上實施之階段者。
+* 5 稱專利申請權，係指得依本法申請專利之權利。稱專利申請權人，除本法另有規定或契約另有訂定外，係指發明人、創作人或其受讓人或繼承人。
 
-> 釋：一、比照第一條之修正將「工業上價值」修正為「可供產業上利用具有有價值」。二、「適用」修正為「實用」。
+* 6 專利申請權及專利權均得讓與或繼承。專利申請權，不得為質權之標的。以專利權為標的設定質權者，除契約另有訂定外，質權人不得實施該專利權。
 
-* 4 左列各款不予發明專利：一、飲食品及嗜好品。但其製造方法不在此限。二、動、植物及微生物新品種。但植物新品種及微生物新菌種育成方法不在此限。三、人體或動物疾病之診斷、治療或手術方法。四、科學原理或數學方法。五、遊戲及運動之規則或方法。六、其他必須藉助於人類推理力、記憶力始能實施之方法或計畫。七、物品新用途之發現。但化學品及醫藥品不在此限。發明妨害公共秩序、善良風俗或衛生者，或發明品之使用違反法律者，不予專利。
+* 7 受雇人於職務上所完成之發明、新型或新式樣，其專利申請權及專利權屬於雇用人，雇用人應支付受雇人適當之報酬。但契約另有訂定者，從其約定。前項所稱職務上之發明、新型或新式樣，係指受雇人於僱傭關係中之工作所完成之發明、新型或新式樣。一方出資聘請他人從事研究開發者，其專利申請權及專利權之歸屬依雙方契約約定，契約未訂定者，屬於發明人或創作人。但出資人得實施其發明、新型或新式權。依第一項、第三項之規定，專利申請權及專利權歸屬於雇用人或出資人者，發明人或創作人享有姓名表示權。
 
-> 釋：本條係基於公眾衛生及公益需要，作不予專利之例外規定。經參酌外國立法例及專利處理實務，並權衡公益，審慎檢討，爰修正如次：一、刪除現行條文第一款及第三款「化學品」、「醫藥品及其調合品」不予專利之規定，以提升國內工業水準。二、飲食品、嗜好品仍不予專利，但其製造方法仍准予專利。並改列為第一款。三、增訂第二款。按對於植物新品種之保護，各國有採以專利或植物新品種登記予以保護者，亦有兼採二種制度而予以保護者，經檢討以納入植物種苗法予以保護為宜。現行第六款「糧食新品種」已涵蓋在「植物新品種」範圍內，爰予刪除。至於「微生物新品種」，則以我國目前尚未達到保護之條件，故增列為不予專利保護之對象。但「植物新品種、微生物菌種」之育成方法尚值鼓勵，仍給予專利。目前世界各國對於「動物新品種」給予專利保護者不多，爰參照外國之法例，亦不予專利。四、增列第三款。蓋此等方法被認為無法供產業上利用，爰予明定避免紛爭。五、增列第四款至第六款。六、物品新用途之發現，雖不應予以專利，但為配合化學品、醫療品之開放專利，及鼓勵化學品、醫藥品新用途之開發研究，爰增列第七款規定。七、由於現行條文第四、五兩款在性質上與修正條文所列各款不同，爰移列為第二項。
+* 8 受雇人於非職務上所完成之發明、新型或新式樣，其專利申請權及專利權屬於受雇人。但其發明、新型或新式樣係利用雇用人資源或經驗者，雇用人得於支付合理報酬後，於該事業實施其發明、新型或新式樣。受雇人完成非職務上之發明、新型或新式樣，應即以書面通知雇用人，如有必要並應告知創作之過程。雇用人於前項書面通知到達後六個月內，未向受雇人為反對之表示者，不得主張該發明、新型或新式樣為職務上發明、新型或新式樣。第一項報酬有爭議時，由專利專責機關協調之。
 
-* 5 發明於軍事上有秘密之必要者，其應得專利之權利得由政府收用，給以相當之報酬。
+* 9 前條雇用人與受雇人間所訂契約，使受雇人不得享受其發明、新型或新式樣之權益者無效。
 
-* 6 申請專利之發明，經審查確定後，給予專利權，並發證書。專利權期間為十五年，自公告之日起算。但自申請之日起不得逾十八年。
+* 10 雇用人或受雇人對第七條及第八條權利之歸屬有爭執而達成協議者，得附具證明文件，向專利專責機關申請變更權利人名義。專利專責機關認有必要時，得通知當事人附具依其他法令取得之調解、仲裁或判決文件。
 
-> 釋：一、第一項係由現行第六條前段移列。二、為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改自審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限，作為修正條文第二項。
+* 11 專利專責機關對於居住外國及邊遠或交通不便之地者，得依職權或據申請，延長其對於專利專責機關應為程序之法定期間。
 
-* 7 專利申請權及專利權，均得讓與或繼承。
+* 12 申請人申請專利及辦理有關專利事項，得委任專利代理人辦理之。在中華民國境內，無住所或營業所者，申請專利及辦理專利有關事項，應委任專利代理人辦理之。專利代理人，應在中華民國境內有住所。其為專業者，除法律另有規定外，以專利師為限。專利師之資格及管理，另以法律定之；法律未制定前，依專利代理人規則辦理。
 
-* 8 專利權期內專利權人有再發明時，得申請追加專利，但其期間至原專利權期間屆滿時為止。
+* 13 二人以上共同申請專利、提起異議或舉發，或為專利權之共有者，除約定有代表者外，辦理一切程序時，應共同連署，並指定其中一人為應受送達人。未指定應受送達人者，專利專責機關除以第一順序申請人、異議人或舉發人為應受送達人外，並應將送達事項通知其他人。
 
-* 9 利用他人之發明或新型在其專利權期內再發明者，得申請專利，但再發明人應給專利權人以相當之補償金或協議合製，專利權人如無正當理由，不得拒絕。
+* 14 專利申請權為共有時，各共有人未得其他共有人之同意，不得以其應有部分讓與他人。
 
-* 10 關於專利事項，於經濟部設立專利局掌理之；在未設立專利局前，由經濟部指定所屬機關掌理之。專利局之組織，以法律定之。
+* 15 繼受專利申請權者，如在申請時非以繼受人名義申請專利，或未在申請後向專利專責機關申請變更名義者，不得以之對抗第三人。為前項之變更申請者，不論受讓或繼承，均應附具證明文件。
 
-> 釋：為簡化行政機構，專利局未經設置，目前係由經濟部指定中央標準局兼辦專利業務，為配合實際情形，修正本條第一項。
+* 16 專利專責機關職員及專利審查委員於任職期內，除繼承外，不得申請專利及直接、間接受有關專利之任何權益。
 
-* 11 專利局於居住外國及邊遠或交通不便之地者，得依職權或據申請延展其對於專利局應為程序之法定期間。
+* 17 專利專責機關職員及專利審查委員對職務上知悉或持有關於專利之發明、新型或新式樣，或申請人事業上之秘密，有保密之義務。
 
-* 12 申請專利，由發明人或其受讓人或繼承人備具申請書、說明書、圖式、模型或樣品及宣誓書，向專利局申請之。說明書應載明申請專利範圍。受讓人或繼承人申請時，應敘明發明人姓名，並附具受讓或繼承證件。第五十一條及第五十二條之發明，其專利申請，由各該條所定專利權歸屬者為之。
+* 18 凡申請人為有關專利之申請及其他程序，延誤法定或指定之期間或不依限納費者，應不受理。但延誤指定期間或不依限納費在處分前補正者，仍應受理。申請人因天災或不可歸責於己之事由延誤法定期間者，於其原因消滅後三十日內得以書面敘明理由向專利專責機關申請回復原狀。但延誤法定期間已逾一年者，不在此限。申請回復原狀應同時補行期間內應為之行為。前二項規定，於異議不適用之。
 
-> 釋：一、第一項刪除「詳細」贅字，又申請專利範圍為說明書中最主要且不可缺少之事項，爰於本項後段增訂之。二、第二項未修正。三、關於雇用人與受雇人之專利權歸屬，第五十一條、第五十二條已予明文規定，宜配合增訂雇用人亦具申請權，爰增訂第三項。
+* 19 稱發明者，謂利用自然法則之技術思想之高度創作。
 
-* 13 申請人申請專利及辦理有關專利事項，得委託專利代理人辦理之。在中華民國境內，無住所或營業所者，申請專利及辦理專利有關事項，應委任專利代理人辦理之。專利代理人，應在中華民國境內有住所。其資格及管理另以法律定之。
+* 20 凡可供產業上利用之發明，無下列情事之一者，得依本法申請取得發明專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明或新型申請在先並經核准專利者。三、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。發明係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成時，雖無前項所列情事，仍不得依本法申請取得發明專利。
 
-> 釋：一、依第十二條之規定，申請專利不限於發明人，爰將第一項之「發明人」修正為「申請人」，「代理人」修正為「專利代理人」，以符合實際。二、申請專利應以中文為之，且為送達之便利及申請手續之完備，爰參照商標法第八條第二項規定，增訂第二項規定在中華民國境內無住所或營業所者，應委任專利代理人辦理。三、因專利事務涉及專業知識，宜建立專利代理人制度，以提昇申請專利案件之水準，並利專利行政之管理，特增訂第三項，明定其資格及管理，另以法律定之。
+* 21 下列各款不予發明專利：一、動、植物新品種，但植物新品種育成方法不在此限。二、人體或動物疾病之診斷、治療或手術方法。三、科學原理或數學方法。四、遊戲及運動之規則或方法。五、其他必須藉助於人類推理力、記憶力始能執行之方法或計畫。六、發明妨害公共秩序、善良風俗或衛生者。有關微生物新品種得予發明專利，應於中華民國加入關稅暨貿易總協定，且該協定與貿易有關之智慧財產權協議書生效滿一年後施行之。但本國人及與中華民國有微生物新品種互惠保護條約、協定之國家之國民不在此限。
 
-* 14 外國人所屬之國家與中華民國如無相互保護專利之條約、協定或由團體、機構互訂經經濟部核准保護專利之協議，或依其本國法律對中華民國國民申請專利，不予受理者，其專利申請，得不予受理。
+* 22 申請發明專利，申專利申請權人備具申請書、說明書、必要圖式及宣誓書，向專利專責機關申請之。申請權人為雇用人、受讓人或繼承人時，應敘明發明人姓名，並附具僱傭、受讓或繼承證明文件。第一項之說明書，除應載明申請專利範圍外，並應載明有關之先前技術、發明之目的、技術內容、特點及功效，使熟習該項技術者能瞭解其內容並可據以實施。前項申請專利範圍，應具體指明申請專利之標的、技術內容及特點。說明書、圖式及申請專利範圍之敘述方式，於施行細則定之。
 
-> 釋：與我國無外交關係之國家，其團體或機構與我國之團體或機構互訂有保護專利之協議，經經濟部核准者，對該外國之人及團體亦應准其依法申請專利，爰參照商標法第六十二條之一第二項規定修正。
+* 23 申請發明專利以規費繳納及前條所規定之文件齊備之日為申請日。其說明書、圖式、宣誓書以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
 
-* 15 二人以上有同一之發明各別申請時，應就最先申請准予專利，如同日申請，則令申請者協議定之，協議不諧時，均不予專利。
+* 24 申請人就相同發明在與中華民國相互承認優先權之外國第一次依法申請專利，並於第一次提出申請專利之次日起十二個月內，向中華民國提出申請專利者，得享有優先權。依前項規定，申請人於一申請案中主張兩項以上優先權時，其優先權期間自最早之優先權日之次日起算。申請人為外國人者，以其所屬之國家承認中華民國國民優先權者為限。主張優先權者，其專利要件之審查，以優先權日為準。
 
-* 16 原發明人與他人有同一之再發明同時申請，應予原發明人以專利。
+* 25 依前條規定主張優先權者，應於申請專利同時提出聲明，並於申請書中載明在外國之申請日、申請案號數及受理該申請之國家。申請人應於申請之日起三個月內檢送經該國政府證明受理之申請文件；未於申請時提出聲明或逾期未檢送者，喪失優先權。
 
-* 17 二人以上共同申請專利或為專利權之共有者辦理一切程序時，除約定有代表者外應共同連署。
+* 26 申請有關微生物之發明專利，申請人應於申請前將該微生物寄存於專利專責機關指定之國內寄存機構，並於申請時附具寄存機構之寄存證明文件。但該微生物為熟習該項技術者易於獲得時，不須寄存。
 
-* 18 專利申請權為共有時，各共有人未得其他共有人之同意，不得以其應有部份讓與他人。
+* 27 二人以上有同一之發明，各別申請時，應就最先申請者准予發明專利。但後申請者所主張之優先權日早於先申請者之申請日時，不在此限。前項申請日、優先權日為同日，應通知申請人協議定之，協議不成時，均不予發明專利。
 
-* 19 承受專利申請權者，如非在申請時以承受人名義申請專利或在申請後向專利局申請變更名義者，不得以之對抗第三人。為前項之申請者，不論讓與或繼承均應附具證件。
+* 28 專利申請權人或專利權人有再發明時，得申請追加專利。但其期間至原專利權期間屆滿時為止。前項之再發明，係指利用原發明之主要技術內容所完成之發明。
 
-* 20 專利局職員任職期內，除繼承外，不得申請專利及直接間接受有關專利之任何權益。
+* 29 利用他人之發明或新型再發明者，得申請發明專利。前項之再發明，係指利用他人發明或新型之主要技術內容所完成之發明。
 
-* 21 申請專利權者，應就每一發明各別申請。但兩個以上之發明利用上不能分離者，不在此限。
+* 30 原發明人與他人有同一之再發明同日申請時，應予原發明人以發明專利。
 
-* 22 申請專利之發明實質上為兩個以上之發明時，經專利局指示或據申請人聲明，得改為各別申請。
+* 31 申請發明專利，應就每一發明各別申請。但兩個以上之發明，利用上不能分離，並有下列情事之一者，得併案申請：一、利用發明主要構成部分者。二、發明為物之發明時，他發明為生產該物之方法，使用該物之方法，生產該物之機械、器具、裝置或專為利用該物特性之物。三、發明為方法之發明時，他發明為實施該方法所直接使用之機械、器具或裝置。
 
-* 23 依前條各別申請之發明，以最初申請之日為申請之日，追加專利之申請改為獨立專利之申請，或獨立專利之申請改為追加專利之申請時亦同。
+* 32 申請專利之發明，實質上為兩個以上之發明時，經專利專責機關通知，或據申請人申請，得改為各別申請。前項各別申請應於原申請案再審查審定前為之。如准予各別申請，仍以最初申請之日為申請日，如有優先權者，仍得主張優先權，並應就原申請案已完成之程序續行審查。
 
-* 24 發明為非專利申請權人所申請經依異議不予專利時，專利申請權人於異議確定之日起六十日內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
+* 33 追加發明專利之申請改為獨立發明專利之申請，或獨立發明專利之申請改為追加發明專利之申請，準用前條第二項規定辦理。
 
-* 25 發明為非專利申請權人請准專利經撤銷時，專利申請權人於撤銷後六十日內並在該專利案核准後二年內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
+* 34 發明為非專利申請權人所申請，經依異議不予專利時，專利申請權人於異議確定之次日起六十日內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
 
-* 26 凡為有關專利之申請及其他程序者，延誤法定或指定之期間或不依限納費，其行為均為無效。但聲明故障經專利局認為有正當理由者，不在此限。故障經認為有正當理由者，得自故障消滅之日起三十日內，並在法定期限屆滿後一年內，補行程序。前項規定於異議不適用之。
+* 35 發明為非專利申請權人請准專利，經專利申請權人於該專利案審查確定後二年內申請舉發，並於舉發撤銷確定之次日起六十日內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
 
-* 27 專利局局長對於專利申請案，應指定審查委員審查之。
+* 36 專利專責機關對於發明專利申請案之實體審查，應指定審查委員審查之。審查委員之資格，以法律定之。前項法律應於本法施行後二年內公布施行。
 
-* 28 審查委員有左列情事之一者，應迴避：一、審查委員之配偶前配偶或未婚配偶為該專利案申請人或代理人者。二、審查委員為該專利案申請人或代理人七親等內之血親，或五親等內之姻親，或曾有此親屬關係者。三、審查委員其配偶，其前配偶，或其未婚配偶，就該專利案與申請人有共同權利人，共同義務人，或償還義務人之關係者。四、審查委員現為或曾為該專利案申請人之法定代理人，或家長家屬者。五、審查委員現為或曾為該專利案申請人之訴訟代理人，或輔佐人者。六、審查委員現為或曾為該專利案之證人，鑑定人，異議人，或舉發人者。
+* 37 審查委員有下列情事之一者，應迴避：一、審查委員之配偶，前配偶或未婚配偶，為該專利案申請人、代理人、代理人之合夥人或與代理人有僱傭關係者。二、審查委員為該專利案申請人或代理人之五親等內血親，或三親等內姻親，或曾有此親屬關係者。三、審查委員之配偶，前配偶，或未婚配偶，就該專利案與申請人有共同權利人、共同義務人、或償還義務人之關係者。四、審查委員現為或曾為該專利案申請人之法定代理人或家長家屬者。五、審查委員現為或曾為該專利案申請人之訴訟代理人或輔佐人者。六、審查委員現為或曾為該專利案之證人、鑑定人、異議人或舉發人者。審查委員有應迴避而不迴避之情事者，專利專責機關得依職權或依申請撤銷其所為之處分後，另為適當之處分。
 
-* 29 申請案經審查後，應作成審定書說明審定理由。
+* 38 申請案經審查後，應作成審定書送達申請人或其代理人。經審定不予專利者，審定書應備具理由。審定書應由審查委員具名。再審查、異議審查、舉發審查與專利權延長審查之審定書亦同。前項審查委員具名，應於本法施行後一年內實施。
 
-* 30 經審查認為可予專利之發明，應將審定書連同說明書、圖式公告之，並通知申請人；不予專利之發明，應將審定書通知申請人。
+* 39 發明經審查認為無不予專利之理由時，應予專利，並應將申請專利範圍及圖式公告之。經審定公告之專利案，任何人均得申請閱覽、抄錄、攝影或影印其審定書、說明書、圖式、宣誓書及全部檔案資料。但專利專責機關依法應予保密者，不在此限。
 
-* 31 專利申請人對於不予專利之審定有不服者，得於審定書送達之次日起三十日內，備具理由書，請求再審查。但因申請程序或申請權人不合法而駁回者，得逕依法提起訴願及行政訴訟。
+* 40 發明專利申請人對於不予專利之審定有不服者，得於審定書送達之次日起三十日內備具理由書，申請再審查。但因申請程序不合法或申請人不適格而駁回者，得逕依法提起行政救濟。經再審查認為有不予專利之情事時，在審定前應先通知申請人，限期申復。
 
-> 釋：按申請案因申請權人不合法或申請程序不合法而駁回時，因與工業技術知識無關，申請人如有不服，自應依法提起訴願及行政訴訟，爰增訂但書予以明定；至依本條但書規定經提起訴願再訴願及行政訴訟撤銷原處分者，自應由原處分機關從實體上審查。
+* 41 公告中之發明，任何人認有違反第四條、第十九條至第二十一條、第二十二條第三項或第四項、第二十七條規定，或利害關係人認有不合第五條或第三十條規定者，自公告之日起三個月內備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
 
-* 32 公告中之發明，任何人認有違反第一條至第四條之規定，或利害關係人認有不合第十二條之規定者，得自公告之日起三個月內備具申請書，附具證件，向專利局提起異議，請求再審查。
+* 42 專利專責機關接到異議書後，應將異議書副本送達申請人或其代理人。申請人應於副本送達之次日起一個月內答辯，除先行申明理由，准予展期者外，逾期不答辯者，逕予審查。
 
-> 釋：一、按任何人對公告之專利案，認有違反專利要件得向專利局提起異議，請求再審查之期間，以目前交通、傳播、通訊設施發達，其「六個月」公告期間已嫌冗長，乃參照多數國家立法例，改為「三個月」，俾法律關係早臻確定。二、參照本法第一零一條有關公告中之新型，利害關係人得提起異議請求再審查之要件規定，增列「或利害關係人認有不合本法第十二條之規定者」，亦得提起異議，以資適用。
-
-* 33 專利局接到異議聲請書後，應將副本發交申請人，限期一個月內答辯，逾期不答辯者，申請案不成立。但經先行聲明理由准予展期者，不在此限。
-
-* 34 再審查時專利局局長應指定未經審查原案之審查委員審查之，作成審定書說明理由。
-
-* 35 專利局審查時，得令申請人於六個月內到局面詢或實驗，或補具詳細或完備之說明書或模型或樣品。
-
-* 36 專利局依職權或依異議之結果，令申請人更正其說明書及圖式。
-
-* 37 對於再審查之審定有不服時，得於審定書送達之次日起三十日內，依法提起訴願及行政訴訟。
-
-> 釋：刪除經濟部為最後核定之程序，以維行政體系，並免權責混淆，申請人不服再審查之審定時，得逕行提起訴願及行政訴訟。
-
-* 38 審定公告之發明，公告期滿無人提起異議或異議不成立時，即為審查確定。不予專利之審定，未依規定請求再審查或經再審查之審定不予專利者，即為審查確定。但經修正其申請專利範圍、說明書、圖式、模型或樣品後，合於專利要件者，得再行申請專利。主管機關對專利之申請，認有不合法定程式者，應於收文後十日內通知補正；其應行補正事項，應以一次通知之。主管機關辦理審查及再審查，自收文之日起至審定之日止，不得逾一年。但補正面詢及試驗期間不計在內。
-
-> 釋：一、最後核定之程序，已於前條審查中刪除，本條參酌予以修正。二、不予專利之審定之確定，本法並未明定，惟不予專利之審定，無非基於非新發明，非可供工業上利用或係化學品、飲食品、嗜好品、醫藥品及其調和品等之技術原因；經確定為不予專利之申請案，申請人如能斟酌不予專利之理由，充實其詳細說明書、圖式或模型，並能充分說明其為合於專利要件者，自應許以重行申請專利，俾便本於工業技術知識另行審查，增訂第二項以符實用。
-
-* 39 公告之專利案，應將審定書、說明書或模型或樣品等，在專利局或其他適宜地點陳列六個月公開閱覽。
-
-* 40 有關國防之發明不予公告，其申請書件不予陳列。
-
-* 41 專利申請權人依本法第二十四條或第二十五條申請之案件，不再公告
-
-* 42 專利權為專利權人專有製造、販賣或使用其發明之權。前項發明，若為一種製造方法者，其專利權效力及於以此方法直接製成之物品。但該物品為他人專利者，需經該他人同意，方得實施其發明。前項製造方法發明之實施，足以增進公益，物品專利權人無正當理由拒絕同意，顯有濫用權利情事者，製造方法專利權人得申請專利局核定適當補償條件後，實施其發明。
-
-> 釋：一、將現行條文前段關於專利權之性質及效力，列為第一項。二、將現行條文後段關於製造方法專利權之效力範圍，移列為第二項，並增訂但書規定，用以釐清製造方法專利權與物品專利權二者間之關係。對於後申請製造方法專利之專利權效力，雖可及於物品，惟該物品既已核准他人專利，故後申請製造方法專利者，如欲實施其專利權，理應徵得物品專利權人之同意，以充分保障物品專利權人之權益。三、第三項係新增，用以鼓勵後續新製造方法專利權人之貢獻。四、第三項所謂「補償條件」，包括補償金或同意相互實施，因其牽涉物品專利權人與製造方法專利權人間之權益，及專利案件之高度技術與複雜性，專利局知之較稔，故定由專利局核定。
-
-* 43 前條之規定，於左列各款情事，不適用之：一、為研究或試驗，實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其實施權人，在舉發前，以善意在國內使用或已完成必須之準備者。六、自國外輸入之物品，係原發明人租與或讓與他人實施所產製者。本條第二及第五兩款之使用人，限於在其原有事業內繼續利用。
-
-> 釋：增列第六款。為免專利權人在本國取得專利權後，壟斷市場，對於專有販賣權之保護範圍，應作合理限制，准許他人自國外輸入原發明人租與讓與他人實施所產製之物品，藉以維護本國之經濟利益。
+* 43 再審查或異議審查時，專利專責機關應指定未曾審查原案之審查委員審查，並作成審定書。前項再審查之審定書應送達申請人。異議審查之審定書應送達申請人及異議人。
 
 * 43.1 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
 
 > 釋：一、本條新增。二、第四條修正開放「醫藥品」專利後，因醫藥品之專利如屬兩種以上之醫藥品混合製造而具有新藥效之醫藥品，就該醫藥品本身及製造方法均可給予專利，惟該專利權之效力，如及於醫生之處方及依處方調劑之醫藥品時，將妨害醫療行為。爰參照日本、芬蘭立法例增訂本條。
 
-* 44 專利案公告後，暫准發生專利權之效力。前項效力，因申請不合程序作為無效或因異議不予專利視為自始即不存在。
+* 44 專利專責機關於審查時，得依職權或依申請限期通知申請人或異議人為下列各款之行為：一、到局面詢。二、為必要之實驗、補送模型或樣品。三、補充或修正說明書或圖式。前項第二款之實驗或補送模型或樣品，專利專責機關必要時得至現場或指定地點實施勘察。因第一項第二款及前項所衍生之費用，由應負舉證責任之當事人負擔之。依第一項第三款所為之補充或修正，除不得變更申請案之實質外，如其補充或修正係在發明專利案審定公告之後提出者，並須有下列各款情事之一始得為之：一、申請專利範圍過廣。二、誤記之事項。三、不明瞭之記載。
 
-* 45 專利權人得以其發明之全部或一部，有限制或無限制讓與他人或租與他人實施。
+* 45 審定公告之發明專利案，專利專責機關認有依職權審查之必要者，應通知申請人限期一個月內答辯，逾期不答辯者，逕予審查。專利專責機關得依前項職權審查之結果，通知申請人修正其說明書及圖式。但其修正應符合前條第四項之規定。
 
-* 46 專利權之讓與或出租，其契約如附有左列情事之一者，不生效力：一、禁止或限制受讓人使用某項物品，或非出讓人出租人所供給之方法者。二、要求受讓人向出讓人購取未受專利保障之出品或原料者。三、所訂讓與費或租用費過高致實施人實施時不能得相當之利潤者。
+* 46 對於再審查、異議或舉發之審定有不服時，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
-* 47 專利權為共有時，除共有人自己實施外，非得各共有人之同意不得讓與或租與他人實施。但另有約定者，從其約定。
+* 47 審定公告之發明專利案，有下列情形之一者，即為審查確定：一、公告期滿無人異議者。二、異議因程序不合法，經專利專責機關不受理後，未依法提起行政救濟；或經提起行政救濟，經駁回確定者。三、異議經審定後未依法提起行政救濟；或經提起行政救濟經駁回確定者。
 
-* 48 專利權共有人未得其他共有人之同意，不得以其應有部份讓與他人。
+* 48 發明經審查有影響國家安全之虞，應將其說明書移請國防部諮詢意見，認有秘密之必要者，其發明不予公告，申請書件予以封存，不供閱覽，並作成審定書送達申請人、代理人及發明人。申請人、代理人及發明人對於前項之發明應予保密，違反者該專利申請權視為拋棄。保密期間，自審定書送達申請人之次日起為期一年，並得續行延展保密期間每次一年，期間屆滿前一個月，專利專責機關應諮詢國防部，無保密之必要者，應即公告。就保密期間申請人所受之損失，政府應給予相當之補償。申請人對於第一項之審定有不服時，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
-* 49 專利權之讓與，應由各當事人署名附具契約，申請專利局換發證書。
+* 49 發明專利申請權人依第三十四條或第三十五條申請之案件，不再公告。
 
-* 50 專利權之繼承，應附具證件，申請專利局換發證書。
+* 50 申請專利之發明，經審定公告後暫准發生專利權之效力。經審定公告之發明審查確定後，自公告之日起給予發明專利權並發證書。發明專利權期限自申請日起算二十年屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理，或因異議成立不予專利審查確定，視為自始即不存在。
 
-* 51 受雇人職務上之發明，其專利權屬於雇用人。但訂有契約者，從其契約。
+* 51 醫藥品、農藥品或其製造方法發明專利權之實施，依其他法律規定，應取得許可證，而於專利案審定公告後需時二年以上者，專利權人得申請延長專利二年至五年，並以一次為限。但核准延長之期間，不得超過向中央目的事業主管機關取得許可證所需期間，取得許可證期間超過五年者，延長期間仍以五年為限。前項申請應備具申請書，附具證明文件，於取得第一次許可證之日起三個月內，向專利專責機關提出。但在專利權期間屆滿前六個月內，不得為之。專利專責機關就前項申請案，有關延長期間之核定，應考慮對國民健康之影響，並會同中央目的事業主管機關訂定核定辦法。第一項延長專利之申請，專利權人為外國人者，以其所屬之國家與中華民國訂有雙邊互惠條約或協定者為限。
 
-* 52 受雇人與職務有關之發明，其專利權為雙方所共有。
+* 52 專利專責機關對於發明專利權延長申請案，應指定審查委員審查，作成審定書送達專利權人或其代理人。專利權人對前項之審定有不服者，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
-* 53 受雇人與職務無關之發明，其專利權屬於受雇人。但其發明係利用雇用人資源或經驗者，雇用人得依契約於該事業實施其發明。
+* 53 追加發明專利權不得單獨申請延長專利權期間。依第七十五條規定視為獨立專利權者，亦同。
 
-* 54 受雇人與雇用人間所訂契約，使受雇人不得享受其發明之權益者，無效。
+* 54 任何人對於經核准延長發明專利權期間，認有下列情事之一者，得附具證據，向專利專責機關舉發之：一、發明專利之實施無取得許可證之必要者。二、專利權人或被授權人並未取得許可證。三、核准延長之期間超過無法實施之期間。四、延長專利權期間之申請人並非專利權人。五、專利權為共有，而非由共有人全體申請者。六、以取得許可證所承認之外國試驗期間申請延長專利權時，核准期間超過該外國專利主管機關認許者。七、取得許可證所需期間未滿二年者。前項舉發於被延長之專利權消滅後，有可回復之法律上利益者，亦得申請之。專利權延長經舉發成立確定者，原核准延長之期間，視為自始不存在。但因違反第一項第三款、第六款規定，經舉發成立確定者，就其超過之期間，視為未延長。
 
-* 55 專利權人因中華民國與外國發生戰事受損失者，得請求延展專利五年或十年，以一次為限。但屬於交戰國人之專利權，不在此限。
+* 55 專利專責機關認有前條第一項各款情事之一者，得依職權撤銷延長之發明專利權期間。專利權延長經撤銷確定者，原核准延長之期間，視為自始不存在。但因違反前條第一項第三款、第六款規定，經撤銷確定者，就其超過之期間，視為未延長。
 
-* 56 專利權人對於請准專利之說明書及圖式，有左列情事之一時，得向專利局請求更正。但不得變更發明之實質：一、申請範圍之縮減。二、誤記之事實。三、不明瞭之記載。前項更正，專利局於核准後，應將其事由刊載專利公報。
+* 56 物品專利權人，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該物品之權。方法專利權人，除本法另有規定者外，專有排除他人未經其同意而使用該方法及使用、販賣或為上述目的而進口該方法直接製成物品之權。發明專利權範圍，以說明書所載之申請專利範圍為準。必要時，得審酌說明書及圖式。本條有關進口權部分之規定，於中華民國加入關稅暨貿易總協定，且該協定之與貿易有關之智慧財產權協議書生效滿一年後施行之。但本國人及與中華民國有互惠保護條約、協定之國家之國民，不在此限。
 
-> 釋：一、第一項未修正。二、本條第二項之「公告」目的在周知大眾，與第四十四條之「公告」暫准發生專利之效力不同，為區別乃修正第二項。
+* 57 發明專利權之效力不及於下列各款情事：一、為研究、教學或試驗實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其被授權人在舉發前以善意在國內使用或已完成必須之準備者。六、專利權人所製造或經其同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第二款及第五款之使用人，限於在其原有事業內繼續利用；第六款得為販賣之區域，由法院依事實認定之。
 
-* 57 專利權人誤將二個以上發明為一個申請得有專利權者，得請求專利局分為各別之專利權。
+* 58 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
 
-* 58 專利權人未得附有限制之受讓人、承租人或實施權人之承諾，不得放棄專利權及為前二條之請求。
+* 59 發明專利權人以其發明專利權讓與他人或授權他人實施，非經向專利專責機關登記，不得對抗第三人。
 
-* 59 有左列情事之一者，專利權當然消滅：一、專利權期滿時，自期滿之次日消滅。二、專利權人無繼承人時，專利權於專利權人死亡之日消滅。三、專利權人逾應繳專利年費之補繳期而仍不繳費時，專利權自原繳費期限屆滿之日消滅。四、專利權人自行放棄時，自其書面表示之日消滅。
+* 60 發明專利權之讓與或授權，契約約定有下列情事之一致生不公平競爭者，其約定無效：一、禁止或限制受讓人使用某項物品或非出讓人、授權人所供給之方法者。二、要求受讓人向出讓人購取未受專利保障之出品或原料者。
 
-> 釋：一、按現行條文第三款之專利費係指專利年費，為資明確乃修正之。二、其餘各款未修正。
+* 61 發明專利權為共有時，除共有人自己實施外，非得共有人全體之同意，不得讓與或授權他人實施。但另有約定者，從其約定。
 
-* 60 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反第一條至第四條規定者。二、專利權人為非專利申請權人者。三、說明書或圖式故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、說明書之記載非發明之真實方法者。
+* 62 發明專利權共有人未得共有人全體之同意，不得以其應有部分讓與他人或設定質權。
 
-> 釋：一、按在我國申請專利之範圍，不需與在外國申請專利範圍一致，仍可擴增、修正或減縮其申請範圍，故其專利說明書之內容不必相同，爰予刪除第四款。二、第一、二、三款未修正，現行第五款移列為第四款。
+* 63 發明專利權之讓與，應由各當事人署名，附具契約，向專利專責機關申請換發證書。專利專責機關核准前項讓與後，應將讓與事項登記於專利權簿。
 
-* 61 前條第二款之舉發，限於有專利申請權人。其他各款，任何人得附具證據向專利局舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一事實及同一證據，再為舉發。
+* 64 發明專利權之質權設定、變更或消滅，應由各當事人署名，附具證明文件，向專利專責機關申請登記；未經登記者，不得對抗第三人。
 
-> 釋：一、第一項未修正。二、第二項「同一理由」之定義，在現行專利法施行細則第四十五條已予規定，爰參照商標法第五十一條及第五十九條之立法例，修正為「同一事實及同一證據」以資明確。
+* 65 發明專利權之繼承，應附具證明文件，向專利專責機關申請換發證書。
 
-* 62 前條舉發案之處理，準用本法關於再審查各條之規定。
+* 66 發明專利權人因中華民國與外國發生戰事受損失者，得申請延展專利權五年至十年，以一次為限。但屬於交戰國人之專利權，不得申請延展。
 
-* 63 專利權經撤銷者，專利權之效力視為自始即不存在。
+* 67 發明專利權人對於請准專利之說明書及圖式，認有下列情事之一時，得向專利專責機關申請更正，但不得變更發明之實質：一、申請專利範圍過廣。二、誤記之事項。三、不明瞭之記載。前項更正，專利專責機關於核准後，應將其事由刊載專利公報。申請專利範圍、說明書、圖式經更正公告者，溯自申請日生效。
 
-* 64 專利權撤銷，其追加專利未撤銷者，視為獨立之專利權，另給證書，至原專利權期滿時為止。
+* 68 發明專利權人將二個以上發明為一個申請得有專利權者，得向專利專責機關申請分割為各別之專利權。
 
-* 65 專利權之核准、變更、撤銷或消滅，專利局應將其事由刊載專利公報。
+* 69 發明專利權人未得被授權人或質權人之承諾，不得為拋棄專利權或為前二條之申請。
 
-> 釋：一、現行條文與施行細則第五十二條均規定應「公告」之事項，為免重複，予以合併。二、修正理由同第五十六條說明二。
+* 70 有下列情事之一者，發明專利權當然消滅：一、專利權期滿時，自期滿之次日消滅。二、專利權人死亡，無人主張其為繼承人者，專利權於依民法第一千一百八十五條規定歸屬國庫之日起消滅。三、專利年費逾補繳期而仍不繳費時，專利權自原繳費期限屆滿之次日消滅。但依第十八條第二項規定回復原狀者，不在此限。四、專利權人拋棄時，自其書面表示之日消滅。
 
-* 66 專利局應備專利權簿，記載核准專利之發明之名稱、專利期限、專利權人代理人姓名、住址，及其他有關專利之權利與法令所定之一切事項。
+* 71 有下列情事之一者，專利專責機關應依職權撤銷其發明專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第十九條至第二十一條或第二十七條規定者。二、發明專利權人為非發明專利申請權人者。三、說明書或圖式不載明實施必要之事項，或記載不必要之事項，使實施為不可能或困難者。四、說明書之記載非發明之真實方法者。
 
-* 67 專利權期間逾四年，無正當理由未在國內實施或未適當實施其發明者，專利局得依關係人之請求，特許其實施。專利局接到特許實施申請書後，應將副本發交專利權人，限期在三個月內答辯；逾期不答辯者，得逕行處理。前項特許實施權人對專利權人應予以補償金，有爭執時，由專利局核定之。專利權依第一項規定特許實施後，特許實施權人，除應與特許實施有關之營業一併移轉外，不得允許他人實施。專利權人於專利局第一次特許實施公告之日起逾二年，無正當理由，仍未在國內實施或未適當實施其發明者，專利局得依關係人之請求撤銷其專利權。
+* 72 前條第二款之舉發，限於有專利申請權人。其他各款，任何人得附具證據，向專利專責機關舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一事實及同一證據，再為舉發。利害關係人對於專利權之撤銷有可回復之法律上利益者，得於專利權期滿或當然消滅後提起舉發。舉發人補提理由及證據，應自舉發之日起一個月內為之。
 
-> 釋：一、現行第一項規定之「核准專利滿三年」其起算與專利期間之生效起算日不一致，爰予修正，並酌予延長期間為四年；並將第一項後段移列為第二項，現行第二項則列為第一項後段。二、第三項新增。現行規定之特許實施權，應解釋為通常實施權，不具排他性，並參照巴黎公約之規定，增列第三項實施權讓與等之規定，以利適用。三、第四項新增。為避免第四條修正開放化學品、醫藥品之專利後，造成壟斷現象，並配合巴黎公約第五條之一第一項第三款之規定，爰增列第四項。
+* 73 第五十四條及前條舉發案之處理，準用第四十二條至第四十四條規定。
 
-* 68 有左列情事之一者，認為未適當實施：一、專利權人以其發明全部或大部分在國外製造，輸入國內者。二、利用他人發明為再發明之專利權人，非實施原發明人之發明，不能實施其再發明；而原發明之專利權人，在合理之條件下拒絕租與再發明人實施者。三、在國外輸入零件，僅在國內施工裝配者。
+* 74 發明專利權經撤銷後，有下列情形之一者，即為撤銷確定：一、未依法提起行政救濟者。二、經提起行政救濟經駁回確定者。發明專利權經撤銷確定者，專利權之效力，視為自始即不存在。
 
-> 釋：一、近年來，華僑或外國人在國內投資設廠案件增多，其產品有限制必須全部外銷者，故專利產品，應不限在國內銷售使用之必要，復以是否大規模製造，認定殊感不易，且本法第七十條已規定，核准專利之發明品，足以代替國內最需要之物品，如經適當實施製造，仍不能充分供給時，專利局得限期令其擴充製造，逾期得取銷其專利權，故現行第一款已無必要，爰予刪除。二、第一款「完全」修正為「全部」。
+* 75 發明專利權撤銷，其追加專利未撤銷者，視為獨立之專利權，另給證書，至原專利權期滿時為止。
 
-* 69 核准專利之發明品，足以代替國內最需要之物品，雖經適當實施製造，仍不能充分供應時，專利局得規定期限令其擴充製造；逾期未擴充製造者，得依關係人之請求，特許其實施。前項擴充期限，得因專利權人之請求，酌予延長。第一項特許實施，準用第六十七條第一項至第三項規定。
+* 76 發明專利權之核准、變更、延長、延展、讓與、授權實施、特許實施、撤銷、消滅、設定質權及其他應公告事項，專利專責機關應刊載專利公報。
 
-> 釋：配合第六十七條而修正第一、二項，並將原條文第二、三項對調。
+* 77 專利專責機關應備置專利權簿，記載核准專利發明之名稱、專利期限、專利權人、代理人姓名、住址及其他有關專利之權利與法令所定之一切事項。前項專利權簿，應供人民閱覽、抄錄、攝影或影印。
 
-* 70 依第六十七條、第六十九條取得特許實施權人不適當實施時，專利局得依關係人之請求或依職權撤銷其特許實施權。
+* 78 為因應國家緊急情況或增進公益之非營利使用或申請人曾以合理之商業條件在相當期間內仍不能協議授權時，專利專責機關得依申請，特許該申請人實施專利權。其實施應以供應國內市場需要為主。專利權人有不公平競爭之情事經法院判決或行政院公平交易委員會處分者，雖無前項之情形，專利專責機關亦得依申請，特許該申請人實施專利權。專利專責機關接到特許實施申請書後，應將申請書副本送達專利權人，限期三個月內答辯；逾期不答辯者，得逕行處理。特許實施權，不妨礙他人就同一發明專利權再取得實施權。特許實施權人應給與專利權人適當之補償金，有爭執時，由專利專責機關核定之。特許實施權，除應與特許實施有關之營業一併移轉外，不得轉讓、授權或設定質權。第一項或第二項所列舉特許實施之原因消滅時，專利專責機關得依申請終止特許實施。
 
-> 釋：配合第六十九條修正之。
+* 79 依前條第一項為增進公益非營利之使用，或第二項之規定而取得特許實施權人，違反特許實施之目的時，專利專責機關得依專利權人之申請或依職權撤銷其特許實施權。
 
-* 71 第六十七條、第六十九條之特許實施及第七十條之撤銷特許實施權，各當事人有不服時，得依法提起訴願及行政訴訟。
+* 80 第二十九條再發明專利權人未經原專利權人同意，不得實施其發明。製造方法專利權人依其製造方法製成之物品為他人專利者，未經該他人同意，不得實施其發明。前二項再發明專利權人與原發明專利權人，或製造方法專利權人與物品專利權人，得協議交互授權實施，協議不成時，得依第七十八條第一項申請特許實施。
 
-> 釋：原草案第六十七條已將核准專利滿三年，無適當理由，未在國內實施其發明者，專利局得依職權撤銷其專利權之規定刪除，以便加強保護已核准之專利權益，而第七十條之已適當實施，只是產品不能充分供應國內需要，就社會利益言，其情況應較前者為好，如今前者之撤銷專利權已予刪除，而後者仍予保留，顯不平衡。審查會以第七十條行政院未提請修正，經本聯席會委員擬具有關各條修正草案，另依規定以委員提案方式提報院會併案討論，故做此修正。
+* 81 第七十八條之特許實施及第七十九條之撤銷特許實施，各當事人有不服時，得依法提起行政救濟。
 
-* 72 政府因軍事上之利用或國營事業之需要，得限制或徵用專利權之一部或全部。但應給專利權人以補償金。
+* 82 發明專利權人應在專利物品或其包裝上標示專利證書號數，並得要求被授權人或特許實施權人為之，其未附加標示者，不得請求損害賠償。
 
-* 73 專利權人應在專利物品或包裝上附有專利標記及專利證書號數，並得要求實施權人為之，其未附加標記，致他人不知為專利品而侵害其專利權者，不得請求損害賠償。
+* 83 發明專利權人或其被授權人或特許實施權人登載廣告，不得逾越專利權之範圍。非專利物品或非專利方法所製物品，不得在物品或其包裝上附加請准專利字樣，或足以使人誤認為請准專利之標示。
 
-* 74 專利權人登載廣告，不得逾越申請專利之範圍；非專利物品或非專利方法所製物品，不得附加請准專利字樣，或足以使人誤認為請准專利之標記。
+* 84 關於發明專利之各項申請，申請人於申請時，應繳納申請費。核准專利者，發明專利權人應繳納證書費及專利年費；請准延長、延展專利者，在延長、延展期內，仍應繳納專利年費。申請費、證書費及專利年費之金額，由經濟部定之。
 
-* 75 關於專利之各項申請，申請人於申請時，應繳申請費。核准專利者，專利權人應繳證書費及專利年費；請准延展專利者，在延展期內，仍應繳專利年費。申請費、證書費及專利年費之金額，由行政院定之。
-
-> 釋：一、第一項未修正。二、配合修正條文第五十九條第三款之用語，將第二項及第三項之「年費」均修正為「專利年費」。
-
-* 76 專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納，第二年以後應於屆期前繳納之。
-
-> 釋：配合目前實務處理需要，對於第一年年費之繳納，規定應由專利局通知申請人限期繳納，爰將現行施行細則第五十四條規定，納入本條以資明確。
-
-* 77 （刪除）
-
-> 釋：延展專利年費之金額，已併定於修正條文第七十五條，爰刪除本條。
-
-* 78 專利權人在應繳專利年費之期間內未繳費時，得於該期限後之六個月內補繳之。但應按規定之費增加一倍。
-
-> 釋：配合第七十七條之刪除，爰刪除但書中「前二條」三字。
-
-* 79 專利局對於發明人或其繼承人認為無繳納專利年費之能力時，得據申請延期二年或減免之。
-
-* 80 （刪除）
-
-> 釋：有關申請專利應納各費之金額已併定於修正條文第七十五條，爰刪除本條。
-
-* 81 專利權受侵害時，專利權人，或實施權人，或承租人，得請求停止侵害之行為賠償損害或提起訴訟。
-
-* 82 依前條請求賠償損害時，得就左列各款擇一計算其損害：一、依民法第二百十六條之規定。但不能提供證據方法以證明其損害時，專利權人得就其實施專利權通常所可獲得之利益，減除受害後實施同一專利權所得之利益，以其差額為所受損害。二、依侵害人因侵害行為所得之利益。於侵害人不能就其成本或必要費用舉證時，以銷售該項物品全部收入為所得利益。三、法院囑託專利局代為估計之數額。除前項規定外，專利權人之業務上信譽，因侵害而致減損時，得另請求賠償相當金額。
-
-> 釋：一、參照七十四年十一月二十九日修正公布之商標法第六十四條，增訂第一、二款計算損害數額之方法，以供專利權人擇一作有利之選擇。二、專利權人遭受他人侵害時，財產上之損害，可依第一項規定辦理，但專利權人業務上信譽之減損，其性質屬於非財產之損害。故增訂第二項，規定亦得請求相當之賠償。
-
-* 83 用作侵害他人專利權行為之物，或由其行為所生之物，得以被侵害人之請求施行假扣押，於判決賠償後作為賠償金之全部或一部。
-
-* 84 意圖偽造或仿造竊用他人請准專利之發明，已為一切必要之準備者，專利權人，實施權人，或承租人得請求制止其行為。
-
-* 85 法院受理專利訴訟案件，得向專利局諮詢意見，或調閱文卷，或通知派員到庭說明。
+* 85 發明專利年費自公告之日起算，第一年應於專利權審查確定後，由專利專責機關通知申請人限期繳納，第二年以後應於屆期前繳納之。前項專利年費得一次繳納數年，遇有年費調整時，毋庸補繳其差額。
 
 * 85.1 物品與他人製造方法專利所製成之物品相同者，推定為以該專利方法所製造。但物品在專利前已為國內外所公知者，不在此限。前項推定之規定，於物品係自國外輸入而能指證確實之製造及供應商者，不適用之。
 
 > 釋：一、本條新增。二、按專利之發明係物品之製造方法者，尤其是化學品、醫藥品等之製造方法，如受侵害時，舉證侵害人係以同一方法製造甚為困難，無異助長仿冒，爰增訂本條第一項規定，課物品製成人以舉證責任，惟若該物品於申請前已為國內外所共知者，則仍應由專利權人舉證。三、物品如屬自國外輸入而能指證確實之製造及供應商者，參照民事訴訟法第二百八十一條已屬有反證，當不適用第一項推定之規定，爰予第二項予以明定。
 
-* 86 專利訴訟案件判決後，法院應以判決書副本送專利局。
+* 86 發明專利年費之繳納，任何人均得為之。未於應繳納專利年費之期間內繳費者，得於期滿六個月內補繳之。但其年費應按規定之年費加倍繳納。
 
-* 87 被侵害人得於判決後，聲請法院將判決書全部或一部登報，其費用由敗訴人負擔。
+* 87 發明專利權人或其繼承人無資力繳納專利年費者，得向專利專責機關申請減免；其減免辦法由經濟部定之。
 
-* 88 關於專利權之民事或刑事訴訟，在申請案、異議案、舉發案、撤銷案未確定以前，法院得停止其程序。
-
-> 釋：現行條文所定「應中止其程序」，對專利訴訟案件易造成異議人或舉發人不提出異議或舉發，而影響專利權人已獲准之專利權之效力，故修正「應中止其程序為「得停止其程序」，俾得由法院視個案情形斟酌處理。
+* 88 發明專利權受侵害時，專利權人得請求賠償損害，並得請求排除其侵害，有侵害之虞者，得請求防止之。專屬被授權人亦得為前項請求，但以專利權人經通知後而不為前項請求且契約無相反約定者為限。本條所定之請求權，自請求權人知有行為及賠償義務人時起，二年間不行使而消滅；自為行為時起，逾十年者亦同。發明人之姓名表示權受侵害時，得請求表示發明人之姓名或為其他回復名譽之必要處分。
 
 * 88.1 未經認許之外國法人或團體就本法規定事項得為告訴、自訴或提起民事訴訟。但以條約或其本國法令、慣例，中華民國國民或團體得在該國享受同等權利者為限。其由團體或機構互訂保護專利之協議，經經濟部核准者，亦同。
 
@@ -254,151 +190,105 @@
 
 > 釋：一、本條新增。二、參照七十四年十一月二十九日公布之商標法第六十六條之二規定，法院得設處理專利案件之專業法庭，以利訴訟之進行。
 
-* 89 偽造有專利權之發明品者，處三年以下有期徒刑、拘役或科或併科十萬元以下罰金。
+* 89 依前條請求損害賠償時，得就下列各款擇一計算其損害：一、依民法第二百十六條之規定。但不能提供證據方法以證明其損害時，發明專利權人得就其實施專利權通常所可獲得之利益，減除受害後實施同一專利權所得之利益，以其差額為所受損害。二、依侵害人因侵害行為所得之利益。於侵害人不能就其成本或必要費用舉證時，以銷售該項物品全部收入為所得利益。三、法院囑託專利專責機關或專家代為估計之數額。除前項規定外，發明專利權人之業務上信譽，因侵害而致減損時，得另請求賠償相當金額。依前二項規定，侵害行為如屬故意，法院得依侵害情節，酌定損害額以上之賠償。但不得超過損害額之二倍。
 
-> 釋：本法現行規定之罰金數額，係六十八年修正所定者，惟目前經濟情況已有變更，現行罰金數額偏低，不足以達成法律上之目的，爰斟酌實際情形，將本條罰金上限，予以提高。
+* 90 用作侵害他人發明專利權行為之物，或由其行為所生之物，得以被侵害人之請求施行假扣押，於判決賠償後，作為賠償金之全部或一部。當事人為前條起訴及聲請本條假扣押時，法院應依民事訴訟法之規定，准予訴訟救助。
 
-* 90 仿造有專利權之發明品或竊用其方法者，處二年以下有期徒刑、拘役或科或併科五萬元以下罰金。
+* 91 製造方法專利所製成之物品在該製造方法申請專利前為國內外未見者，他人製造相同之物品，推定為以該專利方法所製造。前項推定得提出反證推翻之。如能舉證證明以其他方法亦可製造相同之物品者，視為反證。反證所揭示製造及營業秘密之合法權益，應予充分保障。
 
-> 釋：提高罰金上限，理由同第八十九條說明。
+* 92 發明專利訴訟案件法院應以判決書正本一份送專利專責機關。
 
-* 91 明知為偽造或仿造有專利權之發明品而販賣，或意圖販賣而陳列，或自國外輸入者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
+* 93 被侵害人得於勝訴判決確定後，聲請法院裁定將判決書全部或一部登報，其費用由敗訴人負擔。
 
-> 釋：提高罰金上限，理由同第八十九條說明。
+* 94 關於發明專利權之民事或刑事訴訟，在申請案、異議案、舉發案、撤銷案確定前，得停止偵查或審判。
 
-* 92 違反第七十四條之規定者，處六月以下有期徒刑、拘役或科或併科一萬元以下罰金。
+* 95 未經認許之外國法人或團體就本法規定事項得為告訴、自訴或提起民事訴訟。但以條約或其本國法令、慣例，中華民國國民或團體得在該國享受同等權利者為限，其由團體或機構互訂保護專利之協議，經經濟部核准者，亦同。
 
-> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
+* 96 法院為處理發明專利訴訟案件，得設立專業法庭或指定專人辦理。
 
-* 93 本法第八十九條至第九十一條之罪，須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
+* 97 稱新型者，謂對物品之形狀、構造或裝置之創作或改良。
 
-* 94 專利局職員洩漏職務上所知關於專利之發明，或申請人事業上之秘密者，處三年以下有期徒刑、拘役或科或併科四萬元以下罰金。
+* 98 凡可供產業上利用之新型，無下列情事之一者，得依本法申請取得新型專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型申請在先並經核准專利者。三、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。新型係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成且未能增進功效時，雖無前項所列情事，仍不得依本法申請取得新型專利。
 
-> 釋：為加強保障專利權益，對於專利局職員洩漏職務上所知秘密者，誠有加重處罰必要，爰將原訂「或三千元以下罰金」，比照第九十條至第九十二條修正為「或科或併科四萬元以下罰金」，用資儆惕。
+* 99 下列物品不予新型專利：一、妨害公共秩序、善良風俗或衛生者。二、相同或近似於黨旗、國旗、軍旗、國徽、勳章之形狀者。
 
-* 95 凡對於物品之形狀構造或裝置首先創作合於實用之新型者，得依本法申請專利。
+* 100 申請專利之新型，經審定公告後暫准發生專利權之效力。經審定公告之新型審查確定後，自公告之日起給予新型專利權並發證書。新型專利權期限自申請日起算十二年屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理或因異議成立不予專利審查確定，視為自始即不存在。
 
-* 96 本法所稱新型，謂無左列情事之一者：一、申請前已見於刊物或已公開使用他人可能仿效者。但因研究、實驗而發表或使用於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型核准專利在先者。三、經陳列於政府主辦或政府認可之展覽會，於開會之日起，逾六個月尚未申請專利者。四、申請專利前大量製造而非從事實驗者。五、運用申請前之習用技術、知識顯而易知未能增進功效者。
+* 101 申請發明或新式樣專利後改請新型專利者，或申請新型專利後改請發明專利者，以原申請案之申請日為改請案之申請日。但在原申請案審定書送達之次日起三十日後改請者，以改請之日為改請案之申請日。
 
-> 釋：一、為便利引進外國專利技術，提高國內工業技術水準，吸引國外投資，爰將現行第三款刪除，並將現行第四、五款移列為第三、四款。二、發明除應具有新穎性外，尚須有進步性始准專利。如其發明為一般具備該項知識之人，顯而易知者，為習用技術之轉用，各國專利審查實務，均不予專利，乃增列第五款。
+* 102 公告中之新型，任何人認有違反第四條、第一百零五條準用第二十二條第三項或第四項、第二十七條或第九十七條至第九十九條規定，或利害關係人認有不合第五條或第一百零五條準用第三十條規定者，得自公告之日起三個月內，備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
 
-* 97 左列物品，不予新型專利：一、新型之使用違反法律者。二、妨害公共秩序善良風俗或衛生者。三、相同或近似於黨旗、國旗、軍旗、國徽、勳章之形狀者。
+* 103 新型專利權人，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新型專利物品之權。新型專利權範圍，以說明書所載之申請專利範圍為準。必要時，得審酌說明書及圖式。
 
-* 98 合於本法第九十五條及第九十六條之新型於軍事上有秘密之必要者，其應得專利之權利，得由政府收用，給以相當之報酬。
+* 104 有下列情事之一者，專利專責機關應依職權撤銷其新型專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百零五條準用第二十七條或第九十七條至第九十九條規定者。二、新型專利權人為非新型專利申請權人者。三、說明書或圖式，不載明實施必要之事項，或記載不必要之事項，使實施為不可能或困難者。
 
-* 99 申請專利之新型，經審查確定後，給予新型專利權，並發證書。新型專利權之期間為十年，自公告之日起算。但自申請之日起不得逾十二年。
+* 105 第二十二條至第二十五條、第二十七條至第三十條、第三十一條第一款、第三十二條至第四十條、第四十二條至第四十九條、第五十六條第四項、第五十七條、第五十九條至第六十五條、第六十七條至第七十條、第七十二條至第七十七條、第八十條第一項、第三項、第八十二條至第九十條、第九十二條至第九十六條規定，於新型專利準用之。
 
-> 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改自審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
+* 106 稱新式樣者，謂對物品之形狀、花紋、色彩或其結合之創作。稱聯合新式樣者，謂同一人因襲其另一新式樣之創作且構成近似者。
 
-* 100 先經申請發明或新式樣專利改請新型專利者，得請求以申請發明或新式樣專利之日，作為申請新型專利之日。但在發明或新式樣專利申請案審定書送達之日起一個月後改請者，不在此限。
+* 107 凡新式樣，無下列情事之一者，得依本法申請取得新式樣專利：一、申請前有相同或近似之新式樣，已見於刊物或已公開使用者。二、有相同或近似之新式樣，申請在先並經核准專利者。新式樣係熟習該項技術者易於思及之創作者，雖無前項所列情事，仍不得依本法申請取得新式樣專利。近似之新式樣屬同一人者，得申請為聯合新式樣專利，不受前二項之限制。同一人不得就與聯合新式樣近似之新式樣申請為聯合新式樣專利。
 
-> 釋：文字修正。將本條所指審定書，限於主管機關對申請案所為之審定書，不含其他對異議案、舉發案所為決定而成之文書。
+* 108 下列各款不予新式樣專利：一、純功能性設計之物品造形。二、純藝術創作或美術工藝品。三、積體電路電路佈局及電子電路佈局。四、物品妨害公共秩序、善良風俗或衛生者。五、物品相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
 
-* 101 公告中之新型，任何人認有違反第九十五條至第九十七條之規定，或利害關係人認有不合第十二條之規定者，得自公告之日起三個月內，備具申請書，附具證件，向專利局提起異議，請求再審查。
+* 109 申請專利之新式樣，經審定公告後暫准發生專利權之效力。經審定公告之新式樣審查確定後，自公告之日起給予新式樣專利權並發證書。新式樣專利權期限自申請日起算十年屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理或因異議成立不予專利審查確定，視為自始即不存在。
 
-> 釋：本條除作文字修正外，並將審定公告期間，由「六個月」縮短為「三個月」。以目前交通、傳播、通訊設施發達，其「六個月」公告期間已嫌冗長，乃參照多數國家立法例，改為「三個月」，俾法律關係早臻確定。
+* 110 申請新型專利後改請新式樣專利者，以原申請案之申請日為改請案之申請日。但在原申請案審定書送達之次日起三十日後改請者，以改請之日為改請案之申請日。
 
-* 102 新型專利權，為專利權人專有製造販賣或使用其新型之權。
+* 111 申請獨立新式樣專利後改請聯合新式樣專利者，或申請聯合新式樣專利後改請獨立新式樣專利者，以原申請案之申請日為改請案之申請日。但在原申請案審定書送達之次日起三十日後改請者，以改請之日為改請案之申請日。
 
-* 103 專利權人，得以其新型有限制或無限制讓與他人或租與他人實施。
+* 112 申請新式樣專利，由專利申請權人備具申請書、圖說及宣誓書，向專利專責機關申請之。圖說應載明申請專利範圍。申請權人為雇用人、受讓人或繼承人申請時，應敘明創作人姓名，並附具僱傭、受讓或繼承證明文件。
 
-* 104 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反第九十五條至第九十七條之規定者。二、新型專利權人，為非新型專利申請權人者。三、說明書或圖式，故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。
+* 113 申請新式樣專利以規費繳納及前條所規定之文件齊備之日為申請日，其圖說、宣誓書以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
 
-> 釋：刪除第四款，修正理由同第六十條，並刪除第一款「本法」二字及修正第三款之圖說為圖式。
+* 114 以新式樣申請專利，應指定所施予新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
 
-* 105 新型專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納，第二年以後應於屆期前繳納之。
+* 115 公告中之新式樣，任何人認有違反第四條、第一百二十二條準用第二十二條第三項或第四項、第二十七條或第一百零六條、第一百零八條規定，或利害關係人認有不合第五條規定者，得自公告之日起三個月內備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
 
-> 釋：明定第一年新型專利年費由專利局通知申請人限期繳納，並酌作文字修正，修正理由同第七十六條。
+* 116 專利專責機關於審查時，得依職權或依申請限期通知申請人或異議人為下列各款之行為：一、到局面詢。二、補充或修正圖說。三、補送模型或樣品。依前項第二款所為之補充或修正，係在新式樣專利案審定公告之後提出者，以誤記事項為限。
 
-* 106 偽造有專利權之新型者，處二年以下有期徒刑、拘役或科或併科五萬元以下罰金。
+* 117 新式樣專利權人就其指定新式樣所施予之物品，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新式樣專利物品之權。新式樣專利權範圍，以圖說所載之申請專利範圍為準。必要時，得審酌創作說明。
 
-> 釋：提高罰金上限，理由同第八十九條說明。
+* 118 新式樣專利權之效力不及於下列各款情事：一、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其新式樣，並經專利申請人聲明保留其專利權者，不在此限。二、申請前已存在國內之物品。三、專利權人所製造或經專利權人同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第一款之使用人，限於在其原有事業內繼續利用；第三款得為販賣之區域，由法院依事實認定之。
 
-* 107 仿造有專利權之新型者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
+* 119 新式樣專利權人得就所指定施予之物品，以其新式樣專利權讓與他人或授權他人實施，非經向專利專責機關登記，不得對抗第三人。但聯合新式樣專利權不得單獨讓與或授權。
 
-> 釋：提高罰金上限，理由同第八十九條說明。
+* 120 專利權人對於請准新式樣專利之圖說，有誤記之事項時得向專利專責機關申請更正。前項更正，專利專責機關於核准後，應將其事由刊載專利公報。
 
-* 108 明知為偽造或仿造有專利權之新型而販賣，或意圖販賣而陳列，或自國外輸入者，處六月以下有期徒刑、拘役或科或併科一萬元以下罰金。
+* 121 有下列情事之一者，專利專責機關應依職權撤銷其新式樣專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百二十二條準用第二十七條規定者。二、違反第一百零六條至第一百零八條規定者。三、新式樣專利權人為非新式樣專利申請權人者。
 
-> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
+* 122 第二十四條、第二十五條、第二十七條、第三十一條前段、第三十二條、第三十四條至第四十條、第四十二條、第四十三條、第四十五條至第四十七條、第四十九條、第五十六條第四項、第六十條至第六十五條、第六十八條至第七十條、第七十二條至第七十四條、第七十六條、第七十七條、第八十二條至第九十條、第九十二條至第九十六條規定，於新式樣專利準用之。第二十四條第一項所定期間，於新式樣專利案為六個月。
 
-* 109 前三條之罪須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
+* 123 未經物品發明專利權人同意製造該物品，致侵害其專利權者，科新臺幣六十萬元以下罰金。
 
-* 110 第七條至第二十條、第二十三條至第三十一條、第三十三條至第四十一條、第四十三條、第四十四條、第四十六條至第五十四條、第五十六條、第五十八條、第五十九條、第六十一條至第六十六條、第七十二條至第七十五條、第七十八條、第七十九條、第八十一條至第八十五條、第八十六條至第八十八條之二、第九十二條及第九十四條之規定，於新型準用之。
+* 124 未經方法發明專利權人同意使用該方法，致侵害其專利權者，科新臺幣三十萬元以下罰金。
 
-> 釋：配合第八十五條之一、第八十八條之一之增訂而增列第二章準用條文。
+* 125 未經新型專利權人同意製造該物品，致侵害其專利權者，處二年以下有期徒刑、拘役或科或併科新臺幣十五萬元以下罰金。
 
-* 111 凡對於物品之形狀花紋或色彩首先創作，適於美感之新式樣者，得依本法申請專利。
+* 126 未經新式樣專利權人同意製造該物品，致侵害其專利權者，處一年以下有期徒刑、拘役或科或併科新臺幣六萬元以下罰金。
 
-* 112 本法所稱新式樣，謂無左列情事之一者：一、申請前有相同或近似之新式樣，已見於刊物或已公開使用者。二、有相同或近似之新型或新式樣，核准專利在先者。近似之新式樣屬同一人者，為聯合新式樣，不受前項第二款之限制。
+* 127 明知為未經發明專利權人同意所製造之物品而販賣，或意圖販賣而陳列，或意圖販賣而自國外進口者，科新臺幣六萬元以下罰金。
 
-> 釋：一、依現行第一項第一款之規定，須在國內公開使用者，始非專利法所稱之新式樣，本次修正擴張公開使用之範圍及於在國外公開使用之情形，爰刪除第一項第一款「在國內」三字。二、第一項第二款及第二項未修正。
+* 128 明知為未經新型專利權人同意所製造之物品而販賣，或意圖販賣而陳列或意圖販賣而自國外進口者，處六月以下有期徒刑、拘役或科或併科新臺幣三萬元以下罰金。
 
-* 113 左列物品不予新式樣專利：一、妨害公共秩序善良風俗或衛生者。二、相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
+* 129 明知為未經新式樣專利權人同意所製造之物品而販賣，或意圖販賣而陳列，或意圖販賣而自國外進口者，處拘役或科或併科新臺幣一萬五千元以下罰金。
 
-* 114 申請專利之新式樣，經審查確定後，給予新式樣專利權，並發證書。新式樣專利權之期間為五年，自公告之日起算。但自申請之日起不得逾六年。
+* 130 違反第八十三條規定者，處六月以下有期徒刑、拘役或科或併科新臺幣五萬元以下罰金。
 
-> 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改為審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
+* 131 本章之罪，除第一百三十條外，須告訴乃論。專利權人就第一百二十三條至第一百二十六條提出告訴，應檢附侵害鑑定報告與侵害人經專利權人請求排除侵害之書面通知。未提出前項文件者，其告訴不合法。司法院與行政院應協調指定侵害鑑定專業機構。
 
-* 115 先經申請新型專利改請新式樣專利者，得請求以申請新型專利之日，作為申請新式樣專利之日。但在新型專利申請案審定書送達之日起一個月後改請者，不在此限。
+* 132 專利檔案應由專利專責機關永久保存，惟得以微縮底片、磁碟、磁帶、光碟等方式儲存。前項儲存之紀錄，經專利專責機關確認者，視同原檔案，原紙本專利檔案得予銷燬。儲存紀錄之複製品經專利專責機關確認者，推定其為真正。第一項儲存替代物之確認、管理及使用規則，由經濟部定之。
 
-> 釋：將「新型專利案審定書」修正為「新型專利申請案審定書」，修正理由同第一百條說明。
+* 133 本法施行細則，由經濟部定之。
 
-* 116 以新式樣申請專利，由創作人或其受讓人或繼承人備具申請書、圖說及宣誓書，向專利局申請之。圖說應載明申請專利範圍。
+* 134 本法修正施行前，未審定之專利案，其以後之程序，依修正後之規定辦理。本法修正施行前，已審定公告之專利案，其專利權期間之計算，依修正前之規定辦理。
 
-> 釋：增訂圖說應載明申請專利範圍之規定，理由同第十二條說明一。
+* 135 本法修正施行前所提出之申請案，均不得依第五十一條規定，申請延長專利權期間。
 
-* 117 以新式樣申請專利，應指定所使用新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
+* 136 依第二十四條主張之優先權日，不得早於本法公布施行日。
 
-* 118 公告中之新式樣，任何人認有違反第一百十一條至第一百十三條之規定，或利害關係人認有不合第一百十六條之規定者，得自公告之日起三個月內備具申請書，附具證件，向專利局提起異議，請求再審查。
+* 137 第九十一條第一項之物品在本法施行前業經進口報關放行者，於本法施行之次日起六個月內前，檢具相關文件向專利專責機關報備，能指證確實之製造及供應商者，不適用第九十一條第一項規定。
 
-> 釋：一、本條除作文字修正外，並將審定公告期間，由「六個月」縮短為「三個月」。二、「認為」之「為」字係贅文，比照一般立法例，予以刪除。
+* 138 經濟部為獎勵發明、創作，應訂定獎助辦法。
 
-* 119 新式樣專利權，為專利權人就其指定新式樣所使用之物品專有製造或販賣之權。
-
-* 120 前條之規定於左列各款情事不適用之：一、申請前已在國內使用或已完成必須之準備者。但在申請前六個月內於專利申請人處得知其新式樣，並經專利申請人聲明保留其專利權者，不在此限。二、申請前已存在國內之物品。本條第一款之使用人，限於在其原有事業內繼續利用。
-
-* 121 專利權人得就所指定使用之物品，以其新式樣讓與他人，但聯合新式樣不得分析讓與。
-
-* 122 專利權人對於請准新式樣專利之圖說等，有左列情事之一時，得向專利局請求更正：一、申請範圍之縮減。二、誤記之事項。前項更正，專利局於核准後，應將其事由刊載專利公報。
-
-> 釋：修正第二項，理由同第五十六條。
-
-* 123 有左列情事之一者，應撤銷其新式樣專利權，並追繳證書：一、違反本法第一百十一條至第一百十三條之規定者。二、新式樣專利權人，為非新式樣專利申請權人者。
-
-* 124 新式樣專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納；第二年以後應於屆期前繳納之。
-
-> 釋：明定第一年新式樣專利年費由專利局通知申請人限期繳納，並酌作文字修正，理由同第七十六條說明。
-
-* 125 偽造有新式樣專利權之物品者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
-
-> 釋：提高罰金上限，理由同第八十九條說明。
-
-* 126 仿造有新式樣專利權之物品者，處六個月以下有期徒刑、拘役或科或併科一萬元以下罰金。
-
-> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
-
-* 127 明知為偽造或仿造有新式樣專利權之物品而販賣，或意圖販賣而陳列，或自國外輸入者，處拘役或科或併科五千元以下罰金。
-
-> 釋：提高罰金上限，理由同第八十九條說明。
-
-* 128 前三條之罪，須告須乃論，其告訴應自得知被侵害之日起一年內為之。
-
-* 129 第七條、第十條、第十一條、第十二條第二項、第三項、第十三條至第十五條、第十七條至第二十條、第二十四條至第三十一條、第三十三條、第三十四條、第三十七條至第三十九條、第四十一條、第四十四條、第四十七條至第五十四條、第五十八條、第五十九條、第六十一條至第六十三條、第六十五條、第六十六條、第七十三條至第七十五條、第七十八條、第七十九條、第八十一條至第八十五條、第八十六條至第八十八條之二、第九十二條及第九十四條之規定，於新式樣準用之。
-
-> 釋：配合第十二條第三項、第八十五條之一及第八十八條之一之增訂而增列第三章準用條文。
-
-* 130 本法施行細則，由經濟部定之。
-
-* 131 （刪除）
-
-> 釋：本法於民國三十八年一月一日施行前，有關專利事項，係依獎勵工業技術暫行條例辦理，依該條例第二條及第二十二條規定，其專利權之期間最長者為十五年，至今早經屆滿，現行條文已無規定必要，故予刪除。
-
-* 132 本法修正施行前，未審定之專利案，其以後之程序，依修正後之規定辦理。
-
-> 釋：一、本法自民國三十八年一月一日施行迄今已近三十年，本法施行前未經決定之專利案，早經決定；惟本法此次修正專利權期間之起算、縮短公告期間，並將不服專利審查之救濟程序予以明確規定等，對於本法修正施行前已決定之專利案固無適用餘地，惟此次修正施行前未決定之專利案，其以後之程序，則以適用修正後之規定辦理為宜，爰將本條修正之，以杜爭議。二、「決定」二字辭義不明，易生誤解，經修正為「審定。」
-
-* 133 本法自公布日施行。
-
-> 釋：照一般立法例修正之。
+* 139 本法自公布日施行。
 
