公職人員選舉罷免法 1994.6.3

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -96,9 +96,9 @@
 
 > 釋：因第五項「僑居」一詞不易界定，為保障僑居國外國民之參政權，爰增列第八項「具有第五項資格之僑居國外國民，因擔任公職，或回國投資，於執行職務期間，在國內設籍者，亦得登記為候選人」之規定。
 
-* 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、監察委員候選人須專科以上學校畢業或高等考試以上考試及格，具有行政、司法工作經驗四年以上；或曾在專科以上學校任教或執行律師、會計師業務四年以上；或曾任省（市）議員以上公職一任以上。三、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。四、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。五、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。六、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。七、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。八、村、里長候選人須國民小學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表、村、里長以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則，由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第三款至第五款之公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第一款及第三款至第五款之公職候選人資格；曾經第三款公職候選人資格檢覈合格者，取得第四款、第五款公職候選人資格；曾經第四款公職候選人資格檢覈合格者，取得第五款公職候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款、第八款公職候選人資格；曾經第七款公職候選人資格檢覈合格者，取得第八款公職候選人資格。
+* 32 登記為省（市）長、縣（市）長、鄉（鎮、市）長候選人者，應具備左列之學、經歷：一、省（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗六年以上；或曾在專科以上學校擔任講師以上教職六年以上；或執行經高等考試及格之專門職業六年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任省（市）議員以上公職一任以上或縣（市）長以上公職一任以上。二、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。三、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職後選人檢覈規則由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不在經檢覈，取得各該公職候選人資格。曾經第一項第一款之公職候選人資格檢覈及格者，取得第二款、第三款公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第三款公職候選人資格。
 
-> 釋：一、為發揮監察功能，提高監察委員之學、經歷，爰將第一款監察委員候選人之學、經歷予以修正，並移列於第二款。二、原第二款至第七款依序修正為第三款至第八款。三、第一項第六款末「或曾任縣（市）議員以上公職四年以上」修正為「或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上」等語。四、第一項第七款「公職四年以上」修正為「公職一任以上」。五、第一項第八款「國民中學」修正為「國民小學」。六、鑒於曾任村、里長一任以上者，得登記為鄉（鎮、市）民代表候選人故於第八款增列曾任鄉（鎮、市）民代表、村、里長以上公職一任以上者，亦得申請登記為村、里長候選人，以資配合。七、第四項配合第一項各款之修正，予以調整，並作文字修正。
+> 釋：由於民意代表係屬議會之合議制，所重視的是合議精神，可由各層次、不同學歷、區域、各行各業之代表組成，以顯示民意機關之特色，因此各級民代候選人學經歷之規定，可加以放寬或不予限制。
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
