--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -2,11 +2,13 @@
 
 > 釋：為因應動員戡亂時期之終止及臨時條款之廢止，爰將本條文中「動員戡亂時期」文字刪除。
 
-* 2 本法所稱公職人員，指左列人員：一、中央公職人員：國民大會代表、立法院立法委員、監察院監察委員。二、地方公職人員：省（市）議會議員，縣（市）議會議員，鄉（鎮、市）民代表會代表，縣（市）長，鄉（鎮、市）長，村、里長。
+* 2 本條所稱公職人員，指左列人員：一、中央公職人員：國民大會代表、立法院立法委員。二、地方公職人員：省（市）議會議員、縣（市）議會議員、鄉（鎮、市）民代表會代表、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長。
 
-* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之；其連記人數，以不超過應選名額三分之一為限。中央公職人員全國不分區、僑居國外國民之選舉，採政黨比例方式選出之。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
+> 釋：一、配合憲法增修條文第十五條規定，爰刪除第一款中監察委員選舉之規定。二、配合地方制度法制化，爰於第二款內增列省（市）長為地方公職人員。
 
-> 釋：一、增列第二項，配合憲法增修條文規定，明定中央公職人員全國不分區、僑居國外國民選舉，採政黨比例方式選出之。二、原第二項移列為第三項。
+* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。中央公職人員全國不分區、僑居國外國民之選舉，採政黨比例方式選出之。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
+
+> 釋：配合憲法增修條文第十五條規定，爰刪除第一項但書監察委員選舉之規定。
 
 * 4 選舉人、候選人年齡及居住期間之計算，均以算至投票日前一日為準，並以戶籍登記簿為依據。前項居住期間之起算，以申報戶籍遷入登記之申請日期為準。重行投票者，仍依原投票日計算。
 
@@ -16,9 +18,9 @@
 
 * 6 公職人員選舉，中央、省（市）、縣（市）各設選舉委員會辦理之。
 
-* 7 中央公職人員及省（市）議員選舉，由中央選舉委員會主管，並指揮、監督各級選舉委員會辦理之。縣（市）議員及縣（市）長選舉，由省選舉委員會主管，並指揮、監督縣（市）選舉委員會辦理之。鄉（鎮、市）民代表及鄉（鎮、市）長選舉，由縣選舉委員會辦理之。村、里長選舉，由各該直轄市、縣（市）選舉委員會辦理之。第二項至第四項之選舉，並受上級選舉委員會之監督。辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位。
+* 7 中央公職人員、省（市）議員及省（市）長選舉，由中央選舉委員會主管，並指揮、監督各級選舉委員會辦理之。縣（市）議員及縣（市）長選舉，由省選舉委員會主管，並指揮、監督縣（市）選舉委員會辦理之。鄉（鎮、市）民代表及鄉（鎮、市）長選舉，由縣選舉委員會辦理之。村、里長選舉，由各該直轄市、縣（市）選舉委員會辦理之。第二項至第四項之選舉，並受上級選舉委員會之監督。辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位。
 
-> 釋：一、第一項至第三項未修正。二、第四項文字修正。三、第五項將「中央」修正為「上級」俾兼顧省選舉委員會之監督職權。四、增列第六項，明定辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位，以應作業之需要。
+> 釋：一、配合地方制度法制化，於第一項增列省（市）長選舉。二、其餘未修正。
 
 * 8 中央選舉委員會隸屬行政院，置委員若干人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織規程，由行政院擬定，呈請總統核定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定。各選舉委員會委員，應有無黨籍人士；其具有同一黨籍者，在中央選舉委員會不得超過委員總額五分之二，在省（市）、縣（市）選舉委員會不得超過各該選舉委員會委員總額二分之一。各級選舉委員會，應依據法令公正行使職權。
 
@@ -38,15 +40,17 @@
 
 * 13 各級選舉委員會之預算，分別由中央、省（市）、縣（市）政府依法編列。
 
-* 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權：一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。
+* 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權。一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。前項第一款情形，如係戒嚴時期依懲治叛亂條例判決者，不在此限。
 
-* 15 有選舉權人在各該選舉區繼續居住六個月以上者，為公職人員選舉各該選舉區之選舉人。前項之居住期間，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
+> 釋：增列第二項但書。
 
-> 釋：一、現代社會工商發達，人民遷徙頻繁，爰參照各國選舉法規，刪除「本籍」而改以「居住期間」為取得選舉人資格之要件。同時配合職婦團體選舉之廢止，爰刪除「區域」二字。二、第二項配合第一項修正，予以刪除。三、第三項移列第二項，並為使各種公職人員選舉居住期間之計算標準一致，爰刪除「於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉」等字。
+* 15 有選舉權人在各該選舉區繼續居住四個月以上者，為公職人員選舉各該選舉區之選舉人。前項之居住期間，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
 
-* 16 山胞公職人員選舉，以具有山胞身分並有前條資格之有選舉權人為選舉人。監察委員選舉，以省（市）議會議員為選舉人。
+> 釋：將第一項「居住六個月以上者」修改為「居住四個月以上者」。
 
-> 釋：一、第一項參照憲法增修條文規定，將「生活習慣特殊國民」修正為「山胞」並將「生活習慣特殊」修正為「具有山胞身份」。二、配合職婦團體選舉之廢止，刪除第二項。三、原第三項移列第二項。
+* 16 山胞公職人員選舉，以具有山胞身分並有前條資格之有選舉權人為選舉人。
+
+> 釋：配合憲法增修條文第十五條第二項之規定，爰刪除第二項監察委員選舉之規定。
 
 * 17 （刪除）
 
@@ -60,11 +64,13 @@
 
 > 釋：配合職婦團體選舉之廢止，爰刪除本條。
 
-* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。投票所工作人員，得在戶籍地或工作地之投票所投票。監察委員選舉人，應在省（市）議會舉行之選舉會所設之投票所投票。
+* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。投票所工作人員，得在戶籍地或工作地之投票所投票。
 
-> 釋：一、配合職婦團體選舉之廢止，爰修正第二項。二、配合第十五條刪除本籍之規定刪除第三項。並將第四項移列第三項。
+> 釋：配合憲法增修條文第十五條之規定，爰刪除第三項監察委員選舉之規定。
 
-* 21 選舉人投票時，應憑本人國民身分證領取選舉票。監察委員選舉人應憑議員身分證明領取選舉票。
+* 21 選舉人投票時，應憑本人國民身分證領取選舉票。
+
+> 釋：配合憲法增修條文第十五條之規定，爰刪除第二項監察委員選舉之規定。
 
 * 22 選舉人應於規定之投票時間內到投票所投票；逾時不得進入投票所。但已於規定時間內到達投票所尚未投票者，仍可投票。
 
@@ -82,7 +88,9 @@
 
 * 26 二種以上公職人員選舉同時辦理時，選舉人名冊得視實際需要分別或合併編造。
 
-* 27 監察委員選舉人名冊，由省（市）政府民政廳（局）依據省（市）議會議員名冊編造。
+* 27 （刪除）
+
+> 釋：配合憲法增修條文第十五條規定，爰將本條之規定予以刪除。
 
 * 28 （刪除）
 
@@ -92,13 +100,13 @@
 
 * 30 選舉人名冊經公開陳列、公告閱讀期滿後，村、里長應即將原冊暨申請更正情形，報由鄉（鎮、市、區）公所轉送戶籍機關查核更正。選舉人名冊經公告更正後即為確定，並由各直轄市、縣（市）選舉委員會公告選舉人人數。
 
-* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區或其本籍地登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。有選舉權人年滿三十五歲，在各該省（市）行政區域內繼續居住六個月以上者，得於該省（市）或其本籍地，登記為監察委員候選人。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。但監察委員候選人須年滿三十五歲。僑居國外之中華民國國民年滿二十三歲，在國外繼續僑居八年以上，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。但監察委員候選人須年滿三十五歲。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍滿三年或因歸化取得中華民國國籍滿十年者，得依第一項、第三項至第六項規定登記為候選人。具有第五項資格之僑居國外國民，因擔任公職，或回國投資，於執行職務期間，在國內設籍者，亦得登記為候選人。選舉人在本籍地登記為候選人者，應於本籍地行使選舉投票權。
+* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區登記為公職人員候選人。但省（市）長候選人須年滿三十五歲；縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。僑居國外之中華民國國民年滿二十三歲，未曾設有戶籍或已將戶籍遷出國外連續八年以上者，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍三年或因歸化取得中華民國國籍滿十年者，得依前四項規定登記為候選人。
 
-> 釋：因第五項「僑居」一詞不易界定，為保障僑居國外國民之參政權，爰增列第八項「具有第五項資格之僑居國外國民，因擔任公職，或回國投資，於執行職務期間，在國內設籍者，亦得登記為候選人」之規定。
+> 釋：一、配合戶籍法之修訂，爰將第一項「或其本籍地」等文字，及第二項、第九項有關本籍規定予以刪除。二、配合地方制度法制化，第一項增列省（市）長候選人法定年齡之規定。三、配合憲法增修條文第十五條之規定，爰將第三項暨第四項、第五項後段但書監察委員選舉之規定予以刪除。四、原條文第四項至第七項移列為第二項至第五項。五、原第五項移列為第三項，並將「僑居」之定義予以界定。六、原第七項移列為第五項，並將「第一項、第三項至第六項」等文字修正為「前四項」。七、原第八項配合原第五項之修正，予以刪除。
 
-* 32 登記為省（市）長、縣（市）長、鄉（鎮、市）長候選人者，應具備左列之學、經歷：一、省（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗六年以上；或曾在專科以上學校擔任講師以上教職六年以上；或執行經高等考試及格之專門職業六年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任省（市）議員以上公職一任以上或縣（市）長以上公職一任以上。二、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。三、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職後選人檢覈規則由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不在經檢覈，取得各該公職候選人資格。曾經第一項第一款之公職候選人資格檢覈及格者，取得第二款、第三款公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第三款公職候選人資格。
+* 32 登記為省（市）長、縣（市）長、鄉（鎮、市）長候選人者，應具備左列之學、經歷：一、省（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗，或曾在專科以上學校擔任講師以上教職，或執行經高等考試及格之專門職業合計三年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任省（市）議員以上公職或縣（市）長以上公職合計三年以上。二、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗，或曾在專科以上學校擔任講師以上教職，或執行經高等考試及格之專門職業合計三年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職或鄉（鎮、市）長以上公職合計三年以上。三、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗三年以上或曾任鄉（鎮、市）民代表以上公職合計三年以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則由考試院定之。第一項所指行政工作，如為公務員時，在第一款、第二款指薦任或相當薦任以上職務，第三款指委任或相當委任以上職務。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之公職候選人資格檢覈合格者，取得第二款、第三款公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第三款公職候選人資格。
 
-> 釋：由於民意代表係屬議會之合議制，所重視的是合議精神，可由各層次、不同學歷、區域、各行各業之代表組成，以顯示民意機關之特色，因此各級民代候選人學經歷之規定，可加以放寬或不予限制。
+> 釋：一、議會係合議制，重視合議精神，爰刪除各級民意代表須具備學、經歷之規定。二、村里長與一般民選行政首長性質不同，爰併刪除原第八條學、經歷之限制規定。三、配合地方制度法制化，爰於第一項第一款增列省（市）長候選人學、經歷之規定。四、第四項配合第一項之修正，酌作文字修正。
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
@@ -118,17 +126,21 @@
 
 > 釋：配合第三十五條規定，爰將第二款中所定「第三項」修正為「第四項」。
 
+* 36.1 候選人登記截止後至選舉投票前，如有因候選人死亡，致該選舉區之候選人數未超過或不足該選舉區應選出之名額時，應即公告停止選舉活動，並定期重行選舉。
+
+> 釋：本條新增。
+
 * 37 經登記為候選人者，不得撤回其候選人登記。經政黨推薦之區域、山胞選舉候選人，政黨得於登記期間截止前，撤回其推薦。經政黨登記之全國不分區、僑居國外國民選舉候選人名單，政黨得於登記期間截止前撤回或更換。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍者，不影響其候選人資格，並仍在原選舉區行使選舉權。
 
 > 釋：一、為端正選風，杜絕「搓圓仔湯」弊端，爰修正第一項使經登記為候選人者不得撤回其登記。二、明定第二項推薦之候選人為區域、山胞選舉之候選人，俾與第三項所定政黨於全國不分區、僑居國外國民選舉提出候選人名單上之候選人有所區別。三、政黨登記全國不分區及僑居國外國民選舉候選人名單後，如因故須撤回或更換候選人登記截止前撤回或更換，爰增列第三項。四、第三項之更換包括人數變更、人員異動、順序調整。五、配合職婦團體選舉之廢止，爰將原第三項「或喪失職業團體或婦女團體會員資格」及「或各該團體」部分刪除。
 
-* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。政黨推薦之區域、山胞候選人，其保證金減半繳納。但政黨撤回推薦者，應全額繳納。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前三項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、監察委員選舉候選人得票為零票者。二、全國不分區、僑居國外國民選舉候選人未當選者。三、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
+* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前二項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、全國不分區、僑居國外國民選舉候選人未當選者。二、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
 
-> 釋：一、將現行法第二項之候選人修正為「區域、山胞」候選人。二、增列第三項全國不分區、僑居國外國民選舉候選人之保證金，由政黨依公告數額繳納。三、將現行法第三項移列第四項，並配合第三項之增訂，明定全國不分區、僑居國外國民選舉候選人未當選者不發還保證金。
+> 釋：一、本條現行條文第四項第一款，業經行政院於八十二年十二月二十一日以台八十二內字第四五二六四號函請立法院審議之「公職人員選舉罷免法部分條文修正草案」，予以刪除。二、為配合司法院大法官議決釋字第三四０號解釋，爰刪除原第二項有關政黨推薦之候選人其保證金減半繳納之規定，以符憲法平等原則。三、第三項之「前三項」修正為「前二項」。
 
-* 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。四、縣（市）議員，鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。五、縣（市）長，鄉（鎮、市）長，村、里長選舉各依其行政區域為選舉區。
+* 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。四、縣（市）議員、鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。五、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長選舉各依其行政區域為選舉區。
 
-> 釋：一、監察委員選舉區已規定於第三十一條第二項，爰將本條第三款刪除。以下款次遞移。二、有關選舉區之規定，凡民意代表選舉均得在其行政區域內劃分選舉區，爰將國民大會代表及省議員選舉部分修正。
+> 釋：配合地方制度法制化，爰修正第五款，增列省（市）長選舉區之規定。
 
 * 40 （刪除）
 
@@ -150,13 +162,13 @@
 
 > 釋：一、本條將投票完成日期由任期或規定之日期屆滿「二十日前」修正為「十日前」，以縮短選舉程序進行期間。二、重行選舉、重行投票或補選皆係因法定原因而產生，其投票完成日期事實上無法限期完成爰增訂但書規定如上。
 
-* 45 公職人員選舉，候選人競選活動期間依左列規定：一、國民大會代表、立法委員、監察委員、省（市）議員、縣（市）議員、縣（市）長、鄉（鎮、市）長為十天。二、鄉（鎮、市）民代表、村、里長為五天。前項期間，以投票日前一日向前推算；其每日競選活動之起、止時間，由選舉委員會定之。
+* 45 公職人員選舉，候選人競選活動期間依左列規定：一、省長為二十五天。二、直轄市長為十五天。三、國民大會代表、立法委員、省（市）議員、縣（市）議員、縣（市）長、鄉（鎮、市）長為十天。四、鄉（鎮、市）民代表、村、里長為五天。前項期間，以投票日前一日向前推算，其每日競選活動之起、止時間，由選舉委員會定之。
 
-> 釋：為配合職婦團體選舉之廢止、中央公職人員選區之調整及為使同時舉辦之選舉其競選活動期間一致，將第一項原四款之規定，修正為二款，並將其競選活動期間酌作修正。
+> 釋：一、配合憲法增修條文第十五條規定，刪除原第一項第一款監察委員選舉之規定。二、配合地方制度法制化，增列省（市）長競選活動期間之規定。並配合實際活動需要，將省長部分於第一款增列規定，原第一款增列「直轄市長」並改列第二款，原第二款改列第三款。三、其餘未修正。
 
-* 45.1 各種公職人員競選經費最高限額，應由選舉委員會訂定，並於發布選舉公告之日同時公告之。前項競選經費最高限額，應依公職人員選舉種類、競選活動期間，斟酌選舉區面積、交通狀況，競選活動項目及必需費用，並參照物價指數，訂定基本金額；而以選舉區應選出名額除選舉區人口總數，乘基本金額計算之。
+* 45.1 各種公職人員競選經費最高限額，應由選舉委員會依規定計算，於發布選舉公告之日同時公告之。前項競選經費最高限額依左列規定計算之：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉為以各該選舉區之應選名額除選舉區人口總數百分之七十，乘以基本金額新臺幣十五元所得數額，加上一固定金額之和。二、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長選舉為以各該選舉區人口總數百分之七十，乘以基本金額新臺幣八元所得數額，加上一固定金額之和。前項所定固定金額分別定為省（市）長新臺幣一千萬元，國民大會代表、立法委員、縣（市）長各新臺幣六百萬元，省（市）議員新臺幣四百萬元，縣（市）議員、鄉（鎮、市）長各新臺幣二百萬元，鄉（鎮、市）民代表新臺幣五十萬元，村、里長新臺幣八萬元。競選經費最高限額計算有未滿新臺幣一千元之尾數時，其尾數以新臺幣一千元計算之。
 
-> 釋：現行條文第二項所定競選經費最高限額之計算公式，予以刪除，並按實務經驗予以修正。
+> 釋：一、將計算方式及基本數據，予以明文規定，使計算原則明確化。二、按選舉種類、選舉區大小等因素規定一固定金額，另依人口數、應選名額增減計算一定金額，合計為總額，可顧及各項因素所需。
 
 * 45.2 政黨及候選人不得接受左列競選經費之捐助：一、外國團體、法人、個人或主要成員為外國人之團體、法人。二、同一種選舉其他政黨或候選人。三、公營事業或接受政府捐助之財團法人。
 
@@ -170,13 +182,13 @@
 
 > 釋：規定自選舉公告之日起，至投票日後三十日內，候選人競選經費方得申報列舉扣除，第一項爰增訂競選經費支付之起迄期間，俾資候選人有所遵循，並避免徵納雙方爭議，爰修正第一項。
 
-* 45.5 候選人除全國不分區、僑居國外國民選舉及監察委員選舉外，得票達各該選舉區當選票數四分之三以上者，應補貼其競選費用；每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限額。前項當選票數，當選人在二人以上者，以最低當選票數為準；其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項所需補貼費用，依第十三條規定編列預算。
+* 45.5 候選人除全國不分區、僑居國外國民選舉外，當選人在一人，得票達各該選舉區當選票數三分之一以上者；當選人在二人以上，得票達各該選舉區當選票數二分之一以上者，應補貼其競選費用，每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限額。政黨之全國不分區、僑居國外國民選舉得票率達百分之五以上者，應補貼該政黨競選費用；每票補貼新臺幣五元。第一項當選票數，當選人在二人以上者，以最低當選票數為準，其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項、第二項所須補貼費用，依第十三條規定編列預算。
 
-> 釋：一、為使公職人員候選人競選費用之補貼標準更臻明確，爰將第一項文字中之「超過」二字修正為「達」字。又全國不分區、僑居國外國民選舉係依政黨比例代表制產生，候選人未直接參選，明定不予補助，監察委員選舉屬間接選舉，得票數少，沒有補貼實益，亦明定不予補助。同時將補貼金額改為每票三十元。二、增列關於第一項所稱「當選票數」之計算如當選人在二人以上者，應以最低當選票數為準。爰將第二項酌作修正，用臻明確。三、修正第三項明定補助公職人員候選人競選費用之預算，依第十三條規定由各級政府編列支應，爰予修正。
+> 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
 
-* 46 候選人於競選活動期間，除監察委員選舉外，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
+* 46 候選人於競選活動期間，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
 
-> 釋：一、對於競選活動之規範，已明確採取列舉禁止主義立法，爰合併修正第一、二項為第一項。二、現行條文第三項改列為第二項。
+> 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
 
 * 47 左列人員不得擔任助選員：一、已登記之候選人。但全國不分區、僑居國外國民選舉之候選人不在此限。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。
 
@@ -186,25 +198,29 @@
 
 > 釋：本條刪除。與現行第四十六條合併。
 
-* 49 政見發表會，除監察委員選舉由選舉委員會主辦外，分公辦政見發表會及自辦政見發表會。公辦政見發表會，除全國不分區、僑居國外國民選舉免辦外，由選舉委員會於競選活動期間內舉辦，候選人應親自到場發表政見。但鄉（鎮、市）民代表、村、里長選舉，公辦政見發表會，得由選舉委員會視實際情形辦理或免辦。自辦政見發表會，由候選人於競選活動期間內舉辦，每日不得超過八場，每場以兩小時為限，候選人應親自到場，除候選人及其助選員外，他人不得在場演講；其時間、地點應於舉辦二日前函報選舉委員會核准。舉辦政見發表會時，選舉委員會得派監察人員到場監察。
+* 49 公職人員選舉除全國不分區、僑居國外國民選舉外，選舉委員會應於競選活動期間內舉辦公辦政見發表會，候選人應親自到場發表政見，但經選舉區內候選人全體同意不辦理者，應予免辦；鄉（鎮、市）民代表及村、里長選舉，得視實際情形辦理或免辦。直轄市、縣（市）選舉委員會對於轄區內適宜供候選人競選活動之場所地點，於商洽管理機關、管理人或所有權人同意租借後，預先公告。
 
-> 釋：一、第一項順應輿情，並為使候選人於競選活動期間能靈活舉辦政見發表會，爰將現行規定自辦在先公辦在後之政見發表會辦理原則予以修正。二、全國不分區、僑居國外國民選舉之公辦政見發表會，由於政黨推薦之候選人不直接參與競選活動，且事實上舉辦亦有困難，爰予第二項明文規定免辦。三、將自辦政見發表會每日不得超過六場之規定，改以每日不得超過八場，酌予放寬。
+> 釋：一、配合憲法增修條文第十五條規定，刪除監察委員選舉之規定。二、依集會遊行法規定，人民申請集會沒有場次與時間之限制，室內集會規定從寬，為避免限制人民集會之疑義，爰刪除自辦政見發表會之規定，回歸一般法律（集會遊行法）規範，避免法律重疊適用之困擾。三、增列選舉區內全體候選人同意不辦理時，公辦政見發表會免辦。
 
-* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報。前項候選人之政見、號次、相片、本籍之編印，於全國不分區、僑居國外國民選舉候選人不適用之。第一項、第二項候選人及政黨之資料應於申請登記時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人及政黨資料，由候選人及政黨自行負責。其個人及政黨資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦；未經所屬政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍。選舉公報應於投票日二日前送達選舉區內各戶或監察委員之選舉人，並分別張貼適當地點。但全國不分區、僑居國外國民選舉，其選舉公報得由中央選舉委員會以報紙刊登方式為之。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉及政黨選舉活動；其辦法，由中央選舉委員會定之。
+* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報。前項候選人之政見、號次、相片、本籍之編印，於全國不分區、僑居國外國民選舉候選人不適用之。第一項、第二項候選人及政黨之資料應於申請登記時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人及政黨資料，由候選人及政黨自行負責。其個人及政黨資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦；未經所屬政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍。選舉公報應於投票日二日前送達選舉區內各戶，並分別張貼適當地點。但全國不分區、僑居國外國民選舉，其選舉公報得由中央選舉委員會以報紙刊登方式為之。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉及政黨選舉活動；其辦法，由中央選舉委員會定之。
 
-> 釋：一、增列第二項，就選舉公報之內容明定候選人之政見、號次、相片、本籍，不適用於全國不分區、僑居國外國民選舉候選人。二、將第一項後段有關選舉公報送達日期移列於第六項。三、原第二項酌作文字修正，界定候選人及政黨資料之範圍，並移列第三項。四、原第三項移列第四項。五、原第四項移列第五項，修正明定未經政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍，並酌作文字修正。六、原第五項移列第七項。
+> 釋：原第三項、第五項合併，並將文字酌作修正。
 
-* 51 候選人印發以文字、圖畫從事競選之宣傳品，應親自簽名。前項競選之宣傳品，除由選舉委員會提供或指定地點外，不得張貼。張貼之宣傳品，其規格，由中央選舉委員會定之。候選人懸掛或豎立標語、看板、標幟、布條等廣告物，除設置於宣傳車輛者外，以其競選辦事處三十公尺內之範圍為限。
+* 50.1 關於中央公職人員全國不分區及省長、直轄市長選舉，各主管選舉委員會應以公費，在全國性無線電視頻道，為候選人及其政黨舉辦二次以上電視政見發表會，每次時間不得少於一小時，受指定之電視台不得拒絕。廣播電視台、無線電視或有線電視台就候選人及其所屬政黨之相關新聞，應為公正、公平之處理。除依第一項規定外，政黨、候選人或第三人不得自行於廣播、電視播送廣告，從事競選活動或為候選人宣傳。
 
-> 釋：將現行法第三項內「旗幟」修正為「標幟」。
+> 釋：一、本條新增。二、為使候選人及政黨得公平競爭，得以平等使用深具影響力之電視媒體競選，特明定選舉委員會須以公費舉辦電視政見發表會或辯論會，是為第一項。三、第二項明定傳播媒體應為公平公正之報導。
 
-* 51.1 政黨於競選活動期間，得為其所推薦之候選人舉辦政見發表會及印發宣傳品。前項政見發表會，除候選人及其助選員外，由政黨向選舉委員會報備之人員，亦得在場演講。政黨印發之宣傳品，應載明政黨名稱。第一項之政見發表會，應於競選活動期間內舉辦，並準用第四十九條第三項及第四項之規定。
+* 51 候選人印發以文字、圖畫從事競選之宣傳品，應親自簽名；除候選人競選辦事處及宣傳車輛外，不得張貼。候選人懸掛或豎立標語、看板、旗幟、布條等廣告物，不得妨礙公共安全或交通秩序，並應於投票日後七日內自行清除，違者，依有關法令規定處理。
 
-> 釋：本條第四項係配合第四十九條修正條文酌作文字修正。
+> 釋：一、鑑於候選人從事競選宣傳時，選舉委員會設置張貼牌使用率偏低，為符合候選人之需要並免重複設置浪費情事，而以懸掛或豎立方式規定，爰將現行條文第一項之規定予以修正，明定候選人之宣傳品除競選辦事處及宣傳車輛外，禁止張貼。二、修正現行條文第三項。並移列為第二項。三、刪除原條文第二項。
 
-* 52 政黨及候選人於競選活動期間，除監察委員選舉外，得使用宣傳車輛及擴音器。候選人為競選活動使用宣傳車輛，其數量，每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛。以鄉（鎮、市）為其選舉區者，每人不得超過二輛。以村里為其選舉區者，每人不得超過一輛。政黨為競選活動使用宣傳車輛，其數量，每直轄市、縣（市）不得超過五輛。政黨及候選人為競選活動使用宣傳車輛，應懸掛選舉委員會製發之標幟。政黨及候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他政黨及候選人發表政見。
+* 51.1 政黨於競選活動期間，得為其所推薦之候選人印發以文字、圖畫從事競選之宣傳品及懸掛或豎立標語、看板、旗幟、布條等廣告物。政黨印發之宣傳品，應載明政黨名稱，除政黨辦公處及宣傳車外，不得張貼。政黨懸掛或豎立標語、看板、旗幟、布條等廣告物準用前條第二項規定。
 
-> 釋：一、第一項明定政黨得使用宣傳車輛及擴音機助選。二、原第二項前段候選人之宣傳車輛應懸掛選委會製發之標幟，增訂政黨之宣傳車輛亦應如此，並移列第四項。三、第三項明定政黨之宣傳車輛其數目之限制。四、原第三項移列第五項。
+> 釋：一、配合第四十九條之修正，爰刪除第一項中「舉辦政見發表會」等字及原第二項、第四項有關自辦政見發表會之規定。二、配合第五十一條規定之修正，有關政黨印發宣傳品、設置廣告物等規定均比照候選人之規定使其一致。爰修正原第一項、第三項。其中原第三項並移列為第二項。並另增列第三項。
+
+* 52 政黨及候選人於競選活動期間，得使用宣傳車輛及擴音器。候選人為競選活動使用宣傳車輛，其數量，每人不得超過二十輛。但以直轄市或縣（市）為其選舉區者，每人不得超過十輛。以鄉（鎮、市）為其選舉區者，每人不得超過三輛。以村、里為其選舉區者，每人不得超過一輛。政黨為競選活動使用宣傳車輛，其數量，每直轄市、縣（市）不得超過十輛。但以村、里為其選舉區之補選不得超過一輛。政黨及候選人為競選活動使用宣傳車輛，應懸掛選舉委員會製發之標幟。政黨及候選人為競選活動使用之擴音器，以裝置於宣傳車輛或競選辦事處為限，並不得妨害其他政黨及候選人發表政見。
+
+> 釋：一、配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。二、候選人及政黨競選宣傳車數量，酌予放寬。爰修正第二項、第三項。三、配合第四十九條刪除自辦政見發表會之規定，刪除第五項中「、自辦政見發表會場」等字。
 
 * 53 （刪除）
 
@@ -212,17 +228,17 @@
 
 * 54 候選人或其助選員競選言論，不得有左列情事：一、煽惑他人犯內亂罪或外患罪。二、煽惑他人以暴動破壞社會秩序。三、觸犯其他刑事法律規定之罪。
 
-* 55 候選人或其助選員競選活動，不得有左列行為：一、於規定期間之每日起、止時間之外，從事公開競選活動。二、發動選舉人簽名或於廣播、電視播放廣告，從事競選活動。
+* 55 政黨及候選人或其助選員，不得於規定期間之每日起、止時間之外，從事公開競選活動。
 
-> 釋：一、刪除原條文之第一、三、五款，因其所禁止之事項均有相關法令規範，無須重覆。二、原條文之第二、四款改列第一、二款。
+> 釋：刪除第二款。並作文字修正。
 
-* 55.1 競選活動期間，政黨不得有左列行為：一、於規定期間之每日起、止時間之外，從事公開競選活動。二、設立競選辦事處及置助選員。三、於政黨辦公處三十公尺範圍外，張貼宣傳品或懸掛豎立標語看板、旗幟、布條等廣告物，為候選人宣傳。四、發動選舉人簽名或於廣播、電視播送廣告，為候選人宣傳。
+* 55.1 （刪除）
 
-> 釋：一、配合第五十三、五十五條之修正，爰刪除現行法第一、三、四、七款，另增訂第一款。二、原條文之第五、六款改列第三、四款。
+> 釋：配合修正第四十六條、第五十條第六項及第五十一條之一等規定，爰刪除本條。
 
-* 56 競選活動期間，除候選人及其助選員或政黨依本法規定從事競選活動外，任何人不得有左列行為：一、公開演講或公開播放演講之錄影、錄音，為候選人宣傳。二、印發或張貼宣傳品，或懸掛、豎立標語、看板、旗幟、布條等廣告物，為候選人宣傳。三、以未經許可為競選活動使用之宣傳車輛或擴音器，為候選人宣傳。四、結眾遊行，為候選人宣傳。五、發動選舉人簽名或於大眾傳播工具刊播廣告，為候選人宣傳。六、為候選人燃放鞭炮。
+* 56 （刪除）
 
-> 釋：一、序文末句「左列之行為」修正為「左列行為」。二、競選活動期間，政黨不得作為之行為，已於本法第五十五條之一明定，爰於本條序文明定予以排除。三、第一款配合第五十五條第四款酌予修正。四、第二款配合修正條文第五十一條作文字調整。五、第五款酌作文字修正。
+> 釋：原條文之限制不但已形同具文，且剝奪選舉人參與競選活動之權利，為使競選活動之限制儘可能解除，爰刪除本條規定。
 
 * 56.1 政黨及任何人不得於投票日從事競選或助選活動。
 
@@ -232,9 +248,9 @@
 
 > 釋：全國不分區、僑居國外國民選舉係政黨比例代表制，而政黨登記之候選人並未直接參與競選活動，其活動係由政黨為之，爰明定不得接受競選經費，亦不得從事第五十一條之一規定以外之競選活動。
 
-* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。監察委員選舉，於省（市）議會設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票。開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果，並於開票所門口張貼。
+* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票。開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果，除於開票所門口張貼外，應將同一內容之投開票報告表副本當場簽名交付推薦候選人之政黨及未受政黨推薦之候選人所指派之人員。各開票所書面開票結果報告如與投開票報告表不同時，應以投開票報告表內容為準。
 
-> 釋：於第三項末段增訂開票結果亦應於開票所門口張貼，以昭公信。
+> 釋：一、配合憲法增修條文第十五條規定，刪除第二項監察委員選舉之規定。二、原第三項改列第二項，並作文字修正。三、增列第三項。
 
 * 58 投票所、開票所置主任管理員一人，管理員若干人，由選舉委員會派充，辦理投票、開票工作。
 
@@ -246,29 +262,31 @@
 
 > 釋：全國不分區、僑居國外國民選舉係採政黨比例方式，為配合國情及國人之投票習慣且簡易可行，乃採一張票方式選出，並以政黨推薦之候選人為計算標準，爰修正第一項，增列但書規定中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。
 
-* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。但監察委員選舉，其圈選人數以不超過第三條第一項規定之連記人數為準。選舉人圈選後不得將圈選內容出示他人。
+* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。選舉人圈選後不得將圈選內容出示他人。
 
-> 釋：一、配合修正條文第三條第一項將監察委員選舉投票方式改採限制連記投票法，爰就現行第六十一條增訂但書作為本條第一項。二、增列第二項，明定選舉人不得亮票，以保持投票之秘密性。
+> 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
 
-* 62 選舉票有左列情事之一者無效：一、不用選舉委員會製發之選舉票者。二、圈二人以上或監察委員選舉圈選人數超過規定之連記人數者。三、所圈地位不能辨別為何人者。四、圈後加以塗改者。五、簽名、蓋章、按指印、加入任何文字或劃寫符號者。六、將選舉票撕破致不完整者。七、將選舉票汙染致不能辨別所圈為何人者。八、不加圈完全空白者。九、不用選舉委員會製備之圈選工具者。前項無效票，應由開票所主任管理員會同主任監察員認定；認定有爭議時，由全體監察員表決之。表決結果正反意見同數者，該選舉票應為有效。
+* 62 選舉票有左列情事之一者無效：一、不用選舉委員會製發之選舉票者。二、圈二人以上者。三、所圈地位不能辨別為何人者。四、圈後加以塗改者。五、簽名、蓋章、按指印、加入任何文字或劃寫符號者。六、將選舉票撕破致不完整者。七、將選舉票污染致不能辨別所圈選為何人者。八、不加圈完全空白者。九、不用選舉委員會製備之圈選工具者。前項無效票，應由開票所主任管理員會同主任監察員認定；認定有爭議時，由全體監察員表決之。表決結果正反意見同數者，該選舉票應為有效。
 
-> 釋：一、第一項第二款係配合監察委員選舉之投票，修正條文第三條經修正採無記名限制連記投票法，爰增訂其選舉票以「圈選人數超過規定之連記人數者」為無效。其餘各款未修正。二、第二項未修正。
+> 釋：配合憲法增修條文第十五條規定，第一項第二款刪除監察委員選舉之規定。
 
 * 63 在投票所或開票所有左列情事之一者，主任管理員應會同主任監察員令其退出：一、在場喧嚷或干擾勸誘他人投票或不投票，不服制止者。二、攜帶武器或危險物品入場者。三、有其他不正當行為，不服制止者。選舉人有前項情事之一者，令其退出時，應將所持選舉票收回，並將事實附記於選舉人名冊內該選舉人姓名下。其情節重大者，並應專案函報各該選舉委員會。
 
-* 64 選舉投票或開票，遇有天災或其他不可抗力情事，致不能投票或開票時，應由投、開票所主任管理員報經直轄市、縣（市）選舉委員會核准，改定投票或開票日期或場所，其為中央公職人員，省（市）議員選舉或縣（市）議員，縣（市）長選舉者，並分別層報中央或省選舉委員會備查。
+* 64 選舉投票或開票，遇有天災或其他不可抗力情事，致不能投票或開票時，應由投、開票所主任管理員報經直轄市、縣（市）選舉委員會核准，改定投票或開票日期或場所，其為中央公職人員、省（市）議員、省（市）長選舉或縣（市）議員、縣（市）長選舉者，並分別層報中央或省選舉委員會備查。
 
-* 65 公職人員選舉，除另有規定外，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額，其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。全國不分區、僑居國外國民選舉當選名額之分配，依左列規定：一、以國民大會代表、立法委員區域及山胞選舉，各政黨所推薦候選人得票數之和，為各政黨之得票數。以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨國民大會代表、立法委員得票比率；以監察委員省（市）議會選舉各政黨所推薦候選人得票數之和，為各政黨之得票數，以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨監察委員得票比率。二、以應選名額乘前款得票比率所得積數之整數，即為各政黨分配之當選名額；按政黨名單順位依次當選。三、依前款規定分配當選名額，如有剩餘名額，應按各政黨分配當選名額後之剩餘數大小，依次分配剩餘名額。剩餘數相同時，以抽籤決定之。四、各政黨分配之婦女當選名額少於應行當選名額時，優先分配當選。五、政黨登記之候選人名單人數少於應分配之當選名額時，或婦女候選人數少於應分配之婦女當選名額時，均視同缺額。六、各該政黨之得票比率未達百分之五以上者，不予分配當選名額。其得票數不列入第一款計算。七、無黨籍及未經政黨推薦之候選人之得票數，不列入第一款及第六款計算。八、第一款至第三款及第六款小數點均算至小數點第四位，第五位以下四捨五入。
+> 釋：配合地方制度法制化，增列省（市）長選舉之規定。
 
-> 釋：一、第一項增列「除另有規定外」，以排除全國不分區、僑居國外國民選舉之適用。二、增列第三項，明定全國不分區及僑居國外國民選舉當選名額之計算方法。本項計算方法係採商數法之原則，分配名額採二種數據，即各個政黨得票比率當選比率之平均數為分配名額之基準，以調和各政黨得票率與當選率之差距。
+* 65 公職人員選舉，除另有規定外，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額，其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。全國不分區、僑居國外國民選舉當選名額之分配，依左列規定：一、以國民大會代表、立法委員區域及山胞選舉，各政黨所推薦候選人得票數之和，為各政黨之得票數。以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨國民大會代表、立法委員得票比率。二、以應選名額乘前款得票比率所得積數之整數，即為各政黨分配之當選名額；按政黨名單順位依次當選。三、依前款規定分配當選名額，如有剩餘名額，應按各政黨分配當選名額後之剩餘數大小，依次分配剩餘名額。剩餘數相同時，以抽籤決定之。四、各政黨分配之婦女當選名額少於應行當選名額時，優先分配當選。五、政黨登記之候選人名單人數少於應分配之當選名額時，或婦女候選人數少於應分配之婦女當選名額時，均視同缺額。六、各該政黨之得票比率未達百分之五以上者，不予分配黨選名額。其得票數不列入第一款計算。七、無黨籍及未經政黨推薦之候選人之得票數，不列入第一款及第六款計算。八、第一款至第三款及第六款小數點均算至小數點第四位，第五位以下四捨五入。
 
-* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者，始為當選。但監察委員及村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉，為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、縣（市）長、鄉（鎮、市）長選舉，為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉；國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應定期補選。全國不分區、僑居國外國民選舉，不適用前二項規定。
+> 釋：一、配合憲法增修條文第十五條規定，刪除第三項第一款監察委員選舉之規定。二、第三項第七款有關不予列入政黨得票數計算之規定，再行增列於投票日前喪失黨籍之候選人得票數亦不予列計之規定。三、第三項第八款酌作文字修正。
 
-> 釋：增列第三項，明定中央公職人員全國不分區及僑居國外國民選舉當選人係採政黨比例代表制方式選出，故全國不分區及僑居國外國民選舉不適用本條第一項第二項之規定。
+* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者始為當選。但村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉，為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、省（市）長、縣（市）長、鄉（鎮、市）長選舉，為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，省（市）長、縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉；國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應定期補選。全國不分區，僑居國外國民之選舉，不適用前二項規定。
 
-* 67 當選人在就職前死亡或經判決當選無效者，依左列規定辦理：一、縣（市）長、鄉（鎮、市）長、村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、監察委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表部分，視同缺額；同一選舉區內缺額達二分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員、監察委員，不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。
+> 釋：一、配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。二、配合地方制度法制化，第一項第二款增列省（市）長選舉最低當選票數之計算；第二項增列省（市）長重行選舉之規定。
 
-> 釋：一、將本條序文中「被判決」文字修正為「經判決」。第一款、第二款增列「部分」二字。二、鑑於全國不分區及僑居國外國民選舉，採政黨比例代表方式產生，以政黨取向，選民並未直接投票選舉政黨推薦之候選人與一般區域及山胞選舉不同，爰修正本條第二款，增列但書，規定全國不分區、僑居國外國民選出之國民大會代表、立法委員、監察委員在就職前死亡或經判決當選無效而出缺者由該政黨登記之候選人名單按順位依次遞補，並將文字酌作修正。
+* 67 當選人在就職前死亡或經判決當選無效確定者，依左列規定辦理：一、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表部分，視同缺額；同一選舉區內缺額達二分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選舉當選人，在就職前喪失其所屬政黨黨籍者，喪失其當選資格，其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。
+
+> 釋：一、將第一項序文中「當選無效」之下增「確定」二字以資明確。二、配合地方制度法制化，第一款增列省（市）長定期重行選舉之規定。三、配合憲法增修條文第十五條規定，刪除第二款監察委員之規定。四、為強化政黨政治，增列第二項規定。另增列第三項規定上開黨籍喪失由所屬政黨向中央選舉委員會備案。
 
 * 67.1 當選人兼具外國國籍者，應於當選後就職前放棄外國國籍；逾期未放棄者，視為當選無效；其所遺缺額，依前條規定辦理。
 
@@ -276,17 +294,17 @@
 
 * 68 當選人應於規定之日就職，重行選舉或重行投票之當選人未能於規定之日就職者，其任期仍應自該規定之日起算。
 
-* 68.1 中央公職人員，除全國不分區、僑居國外國民選出者外，因辭職、罷免或其他事故出缺，致同一選舉區或省（市）議會選出者，其缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺行使職權期間不足一年時，不予補選。
+* 68.1 中央公職人員，於就職後因死亡、辭職或其他事由出缺時，依左列規定辦理：一、區域、山胞選出者，同一選舉區內缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺任期不足一年時，不予補選。二、全國不分區、僑居國外國民選出者，其所遺缺額，由該政黨登記之候選人名單按順位依序遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選出之中央公職人員，在就職後喪失其所屬政黨黨籍者，喪失其中央公職人員資格，由中央選舉委員會函請國民大會或立法院予以註銷。其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
 
-> 釋：參照現行「動員戡亂時期自由地區增加中央民意代表名額辦法」第十三條規定，對於中央民意代表，除全國不分區、僑居國外國民選出者外因辭職、罷免或其他事故出缺之補選規定。
+> 釋：一、將第一項分列為二款：１．第一款維持原條文有關區域、山胞選出者，出缺時之處理規定，唯配合憲法增修條文第十五條規定，刪除「或省（市）議會選出者」之規定。另將「行使職務期間」修正為「任期」。２．增列第二款有關全國不分區、僑居國外國民選出者，就職後出缺之遞補之規定。二、增列第二項、第三項有關全國不分區、僑居國外國民選出之中央公職人員在就職後喪失其所屬政黨黨籍者，其所遺缺額遞補之規定。三、基於法律不溯既往原則，增列第四項明定第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
 
 * 69 公職人員之罷免，得由原選舉區選舉人向選舉委員會提出罷免案。但就職未滿一年者，不得罷免。全國不分區、僑居國外國民選舉之當選人，不適用罷免之規定。
 
 > 釋：增列第二項，明定全國不分區及僑居國外國民選舉之候選人不適用罷免之規定。
 
-* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
+* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之三以上。二、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之五以上。三、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長，為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
 
-> 釋：罷免案之提議人數修正為原選舉區選舉人總數百分之二以上。
+> 釋：一、配合憲法增修條文第十五條之規定，爰將第一項第二款「監察委員罷免有關提議人數規定」刪除，並將原第一項第三、四款移列為第一項第二、三款。二、配合地方制度法制化，增列省（市）長罷免提議之規定，第一項第三款「縣（市）長」之上增列「省（市）長」三字。
 
 * 71 現役軍人、警察或公務人員不得為罷免案提議人。
 
@@ -294,9 +312,9 @@
 
 * 73 選舉委員會收到罷免案提議後，應於十五日內查對其提議人；如合於規定，即通知提議人之領銜人於十日內領取連署人名冊，並於一定期間內徵求連署。前項提議人有不合規定者刪除，並即通知提議人之領銜人於五日內補足；逾期不予受理。
 
-* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應為原選舉區選舉人總數百分之十三以上。
+* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十二以上。二、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十五以上。三、省（市）長、縣（市）長、鄉（鎮、市）長，為原選舉區選舉人總數百分之十三以上。四、村、里長，為原選舉區選舉人總數百分之十八以上。
 
-> 釋：罷免案之連署人修正為原選舉區選舉人總數百分之十三以上。
+> 釋：一、配合憲法增修條文第十五條之規定，爰將第二款監察委員之規定刪除，並將原第三、四、五款移列第二、三、四款。二、配合地方制度法制化，第三款增列省（市）長罷免連署之規定。
 
 * 75 第七十條及第七十四條所稱選舉人總數，以被罷免人當選時原選舉區之選舉人總數為準；所稱選舉人，其年齡及居住期間之計算，以罷免案提出日為準。
 
@@ -306,9 +324,9 @@
 
 * 78 選舉委員會應於被罷免人提出答辯書期間屆滿後五日內，就左列事項公告之：一、罷免投票日期及投票起、止時間。二、罷免理由書。三、答辯書。但被罷免人不於規定期間內提出答辯書者，不予公告。
 
-* 79 罷免案提議人，除監察委員之罷免外，於徵求連署期間，得設立罷免辦事處，置辦事人員。罷免案之進行，除徵求連署之必要活動外，不得有罷免或阻止罷免之宣傳活動。罷免辦事處及辦事人員之設置辦法及徵求連署辦法，由中央選舉委員會定之。
+* 79 罷免案提議人，於徵求連署期間，得設立罷免辦事處，置辦事人員。罷免案之進行，除徵求連署之必要活動外，不得有罷免或阻止罷免之宣傳活動。罷免辦事處及辦事人員之設置辦法及徵求連署辦法，由中央選舉委員會定之。
 
-> 釋：一、第一項文字修正。二、增訂第二項、第三項明定罷免案之進行除徵求連署之必要活動外，不得有其他罷免或反罷免之宣傳活動；其徵求連署辦法則授權中央選舉委員會定之。
+> 釋：一、配合憲法增修條文第十五條之規定，爰將第一項「除監察委員之罷免外，」等字予以刪除。
 
 * 80 罷免案之投票，應於罷免案宣告成立後三十日內為之。但不得與各類選舉之投票同時舉行。
 
@@ -320,17 +338,17 @@
 
 * 82 罷免案之投票人及投票、開票，準用本法有關選舉人及投票、開票之規定。
 
-* 83 罷免案投票人數不足原選舉區選舉人總數二分之一以上或同意罷免票數未超過有效票數二分之一以上者，均為否決。
+* 83 罷免案投票結果，投票人數應合於左列規定，同意罷免票多於不同意罷免票者，即為通過：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，應有原選舉區選舉人三分之一以上之投票。二、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長，應有原選舉區選舉人二分之一以上之投票。投票人數不足前項規定數額或同意罷免票未超過不同意罷免票者，均為否決。
 
-> 釋：罷免案之最低投票人數規定。
+> 釋：一、配合憲法增修條文第十五條之規定，爰將第一項第二款有關監察委員罷免案投票人數之限制規定刪除，並將第一項第三款移列為第一項第二款。二、配合地方制度法制化，增列省（市）長罷免投票之規定，第一項第二款「縣（市）長」之上增列「省（市）長」三字。
 
 * 84 罷免案經投票後，選舉委員會應於投票完畢七日內公告罷免投票結果。罷免案通過者，被罷免人應自公告之日起，解除職務。
 
 * 85 罷免案通過者，被罷免人自解除職務之日起，四年內不得為同一公職人員候選人；其於罷免案宣告成立後辭職者亦同。罷免案否決者，在該被罷免人之任期內，不得對其再為罷免案之提議。
 
-* 86 違反第五十四條第一款之規定者，處七年以上有期徒刑；違反第二款之規定者，處五年以上有期徒刑；違反第三款之規定者，依各該有關處罰之法律處斷。政黨舉辦之政見發表會，其在場演講人員之言論，違反第五十四條之規定者，依前項規定處斷。
+* 86 違反第五十四條第一款之規定者，處七年以上有期徒刑；違反第二款之規定者，處五年以上有期徒刑；違反第三款之規定者，依各該有關處罰之法律處斷。
 
-> 釋：為規範政黨舉辦政見發表會在場演講人員之言論，爰增列第二項。
+> 釋：配合第五十一條之一刪除政黨政見發表會之規定，爰刪除第二項之規定。
 
 * 87 利用競選或助選機會，公然聚眾，以暴動破壞社會秩序者，處七年以上有期徒刑；首謀者，處無期徒刑或十年以上有期徒刑。前項之未遂犯罰之。
 
@@ -340,35 +358,47 @@
 
 > 釋：一、本條新增。二、參照刑法第一百三十五條，將個人以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
 
-* 87.2 公然聚眾，犯前條之罪者，在場助勢之人，處三年以下有期徒刑、拘役或新臺幣九萬元以下罰金；首謀及下手實施強暴脅迫者，處三年以上十年以下有期徒刑。犯前項之罪，因而致公務員於死者，首謀及下手實施強暴脅迫者，處無期徒刑或七年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。
+* 87.2 公然聚眾，犯前條之罪者，在場助勢之人，處三年以下有期徒刑、拘役或科新臺幣三十萬元以下罰金；首謀及下手實施強暴脅迫者，處三年以上十年以下有期徒刑。犯前項之罪，因而致公務員於死者，首謀及下手實施強暴脅迫者，處無期徒刑或七年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：第一項罰金部分酌量提高，文字並酌作修正。
 
-* 88 違反第四十五條之二第一款規定接受捐助者，處五年以下有期徒刑；違反第二款或第三款規定接受捐助者，處一年以下有期徒刑、拘役或新臺幣三萬元以下罰金。犯前項之罪者，其接受捐助所得財物沒收之；如全部或一部不能沒收時，追徵其價額。
+* 88 候選人違反第四十五條之二第一款規定接受捐助者，處五年以下有期徒刑；違反第二款或第三款規定接受捐助者，處一年以下有期徒刑、拘役或科新臺幣十萬元以下罰金。政黨之負責人、代表人，政黨或候選人之代理人、受雇人犯前項之罪者，依前項之規定處罰。其所犯為前項前段之罪者，並對該政黨或候選人科新臺幣十萬元以上五十萬元以下罰金；所犯為前項後段之罪者，並對該政黨或候選人科新臺幣十萬元以下罰金。犯前二項之罪者，其接受捐助所得財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：一、第一項增列「候選人」等字，罰金部分並酌量提高。二、第四十五條之二規範之主體除候選人外，尚有政黨，爰增列第二項，並採兩罰規定。三、原第二項移列第三項，並酌作修正。
 
-* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科新臺幣十五萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者，亦同。犯前項之罪者，所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。
+* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，併科新臺幣六十萬元以上六百萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者，亦同。犯第一項之罪者，用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之；犯第二項之罪者，所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：一、因社會經濟情勢已與從前不同，犯本罪者每挾其經濟上之優勢，為所欲為，除應科刑外，併科新臺幣六十萬元以上六百萬元以下罰金，以淨化選風。二、用以行賄之物，不問何人所有，均予沒收，始能達到杜絕賄選之目的，爰增列第三項前段規定。三、原第三項移列第三項後段，並酌作修正。
 
 * 90 以強暴、脅迫或其他非法之方法為左列行為之一者，處五年以下有期徒刑：一、妨害他人競選或使他人放棄競選者。二、妨害他人為罷免案之提議、連署或使他人為罷免案之提議、連署者。前項之未遂犯罰之。
 
-* 91 有左列行為之一者，處五年以下有期徒刑，得併科新臺幣十五萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使之不為提議或連署，或為一定之提議或連署者。
+* 90.1 對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處五年以下有期徒刑，得併科新臺幣四十萬元以上四百萬元以下罰金。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為共犯者免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲候選人為共犯者，減輕或免除其刑。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：一、本條新增。二、因社會經濟情勢已與從前不同，犯本罪者每挾其經濟上之優勢，為所欲為，除應科刑外，並參酌第九十一條，規定得併科新臺幣四十萬元以上四百萬員以下罰金。三、為徹底杜絕賄選，預備犯亦應處罰。四、用以行賄之物，不問何人所有，均一律沒收，始能達到杜絕賄選之目的。
+
+* 91 有左列行為之一者，處五年以下有期徒刑，併科新臺幣五十萬元以上五百萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使其不為提議或連署，或為一定之提議或連署者。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。
+
+> 釋：配合第九十條之一增訂，修正本條第一項，並增列第二項及第三項規定。
+
+* 91.1 意圖漁利，包攬第八十九條第一項、第二項、第九十條之一第一項或第九十一條第一項各款之事務者，處一年以上七年以下有期徒刑，得併科新臺幣五十萬元以上五百萬元以下罰金。前項之未遂犯罰之。
+
+> 釋：本條新增。
 
 * 92 意圖使候選人當選或不當選，以文字、圖畫、錄音、錄影、演講或他法，散布謠言或傳播不實之事，足以生損害於公眾或他人者，處五年以下有期徒刑。
 
 > 釋：為端正選風，避免以傳聞不實之謠言，以訛傳訛，或故意歪曲事實，致生損害於公眾或他人，爰將本條所定「散佈虛構事實」修正為「散布謠言或傳播不實之事」，並增列「錄音、錄影或他法」以應實際需要。
 
-* 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或新臺幣六萬元以下罰金。
+* 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或科新臺幣二十萬元以下罰金。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：罰金部分酌量提高，文字並酌作修正。
 
-* 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或新臺幣三萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
+* 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或科新臺幣十萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
+> 釋：罰金部分酌量提高，文字並酌作修正。
+
+* 94.1 將領得之選舉票或罷免票攜出場外者，處一年以下有期徒刑、拘役或科新臺幣一萬五千元以下罰金。
+
+> 釋：一、本條新增。二、將選舉票及罷免票攜出場外者其居心叵測，爰將原第九十七條第三項中段之處罰修正為刑事罰，並專列本條規範之。
 
 * 95 意圖妨害或擾亂投票、開票而抑留、毀壞、隱匿、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表、開票統計或圈選工具者，處五年以下有期徒刑。
 
@@ -378,17 +408,17 @@
 
 > 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。
 
-* 96 違反第四十九條第三項或第五十六條第一款之規定，經監察人員制止不聽者，處新臺幣一萬元以上五萬元以下罰鍰。
+* 96 （刪除）
 
-> 釋：配合第四十九條之修正條文，爰將「第四十九條第三項」等字修正為「第四十九條第四項」。
+> 釋：配合第四十九條及第五十六條之刪除，爰刪除本條文。
 
-* 96.1 政黨違反第五十一條之一第二項、第四項或第五十六條第一款之規定，經監察人員制止不聽者，除行為人依前條規定處罰外，處政黨新臺幣三萬元以上十五萬元以下罰鍰。
+* 96.1 （刪除）
 
-> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。
+> 釋：選罷法第五十六條所規範之主體係候選人及其助選員或政黨以外之人，則政黨既非該條之行為主體，自不可能違反該條第一款之規定，並配合第五十一條之一之修正，爰刪除本條。
 
-* 97 違反第四十五條之三第一項、第二項、第四項、第五十一條第一項、第三項、第五十一條之一第三項之規定或依第四十五條之三第五項所定準則或依第五十一條第二項所定張貼地點、規格等之規定者，處新臺幣三千元以上三萬元以下罰鍰。違反第五十二條第二項至第五項、第五十五條、第五十五條之一、第五十六條第二款至第六款、第五十六條之一、第七十九條第二項之規定或依第四十六條第二項、第七十九條第三項所定辦法之規定，經監察人員制止不聽者，亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處新臺幣一千五百元以上一萬五千元以下罰鍰。
+* 97 違反第四十五條之三第一項、第二項、第四項、第五十一條第一項、第五十一條之一第二項之規定或依第四十五條之三第五項所定準則者，處新臺幣一萬元以上十萬元以下罰鍰。違反第五十二條第二項至第五項、第五十五條、第五十六條之一、第七十九條第二項之規定或依第四十六條第二項、第七十九條第三項所定辦法之規定，經監察人員制止不聽者，亦同。將選舉票或罷免票以外之物投入票匭，或故意撕毀領得之選舉票或罷免票者，處新臺幣五千元以上五萬元以下罰鍰。
 
-> 釋：一、依據行政院七十九月七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。二、配合第五十一條修正，刪除有關該條第二項、第三項處罰之規定，至於候選人違反修正之第五十一條第二項規定者，依其他相關法規規定處罰。三、第二項增列違反第十六條之一之處罰規定。
+> 釋：一、第一項配合第五十一條、第五十一條之一有關宣傳品、廣告物張貼、懸掛方式之修正，酌作修正。並將違反第四十五條之三第二項之處罰移列第九十五條之一。二、第三項配合第九十四條之一將選舉票攜出場外改列刑事罰之修正酌作修正。三、罰鍰部分酌量提高。
 
 * 97.1 （刪除）
 
@@ -408,15 +438,19 @@
 
 > 釋：配合法院組織法有關條文之修正，將第一項中最高法院檢察署「檢察長」修正為「檢察總長」，該管法院「檢察處首席檢察官」修正為「檢察署檢察長」。
 
+* 100.1 犯本章之罪或刑法第六章妨害投票罪之案件，各審受理法院應於六個月內審結。
+
+> 釋：本條新增，有關選舉之犯罪宜速審速結，以維公平正義；再者，拖延審理時間，證據亦易滅失。
+
 * 101 選舉委員會辦理選舉、罷免違法，足以影響選舉或罷免結果，檢察官、候選人、被罷免人或罷免案提議人，得自當選人名單或罷免投票結果公告之日起十五日內，以各該選舉委員會為被告，向管轄法院提起選舉或罷免無效之訴。
 
 > 釋：參採司法院院解字第三九八二號解釋意旨及以往臺灣省地方公職人員選舉法規關於選舉訴訟之規定，爰增列「足以影響選舉或罷免結果」等字。
 
 * 102 選舉或罷免無效之訴，經法院判決無效確定者，其選舉或罷免無效，并定期重行選舉或罷免。其違法屬選舉或罷免之局部者，局部之選舉或罷免無效，並就該局部無效部分定期重行投票。但局部無效部分顯不足以影響選舉或罷免結果者，不在此限。
 
-* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項之規定，經監察人員書面制止不聽者。
+* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足認有影響選舉結果之虞者。二、對於候選人、有投票權人或選務人員，以強暴、脅迫或其他非法之方法，妨害他人競選、自由行使投票權或執行職務者。三、有第八十九條、第九十一條第一款、刑法第一百四十六條第一項之行為者。四、有第九十條之一第一項之行為，足認有影響選舉結果之虞者。前項各款情事，經判決當選無效確定者，不因同一事由經刑事判決無罪而受影響。
 
-> 釋：配合第四十九條之修正，爰修正現行法第二款。
+> 釋：一、本條現行條文第二款，業經行政院於八十二年十二月二十一日以台八十二內字第四五二六四號函請立法院審議之「公職人員選舉罷免法部分條文修正草案」，予以刪除。二、為防制候選人以金錢、暴力介入選舉，爰增列第二、三、四款得提起當選無效之訴之規定。三、增列第二項明定判決當選無效確定者，不因同一事由於刑事判決無罪而受影響，以資明確。
 
 * 103.1 當選人有第三十六條各款規定情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，於其任期或規定之日期屆滿前，向該管轄法院提起當選無效之訴。
 
@@ -434,9 +468,9 @@
 
 > 釋：修正第一至第三款內容，合併為二款；刪除第二項。
 
-* 109 選舉、罷免訴訟，設選舉法庭，採合議制審理，並應先於其他訴訟審判之，以二審終結，並不得提起再審之訴。受理上訴之法院應於三個月內審結。
+* 109 選舉、罷免訴訟，設選舉法庭，採合議制審理，並應先於其他訴訟審判之，以二審終結，並不得提起再審之訴。各審受理之法院應於六個月內審結。
 
-> 釋：一、第一項文字修正。將現行選舉訴訟一審制改為二審，並規定不得提起再審之訴，以速審速結。二、第二項以下刪除。
+> 釋：將現行法僅限制上訴法院之審結期限修正各審審理均為期限六個月。
 
 * 110 選舉、罷免訴訟程序，除本法規定者外，準用民事訴訟法之規定。但關於捨棄、認諾、訴訟上自認或不爭執事實效力之規定，不在準用之列。
 
