公職人員選舉罷免法 1994.10.6

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -310,7 +310,9 @@
 
 > 釋：一、第一項文字修正。二、增訂第二項、第三項明定罷免案之進行除徵求連署之必要活動外，不得有其他罷免或反罷免之宣傳活動；其徵求連署辦法則授權中央選舉委員會定之。
 
-* 80 罷免案之投票，應於罷免案宣告成立後三十日內為之。
+* 80 罷免案之投票，應於罷免案宣告成立後三十日內為之。但不得與各類選舉之投票同時舉行。
+
+> 釋：選罷法中規範的選區屬於中選區及大選區，而非單一選區，亦即罷免案之投票者與選舉時之投票者不一致，因此罷免案之投票不宜與選舉之投票同時舉行。
 
 * 81 罷免票應在票上刊印「同意罷免」、「不同意罷免」兩欄，由投票人以選舉委員會製備之工具圈定之。投票人圈定後不得將圈定內容出示他人。
 
