公職人員選舉罷免法 1994.10.20

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -284,9 +284,9 @@
 
 > 釋：增列第二項，明定全國不分區及僑居國外國民選舉之候選人不適用罷免之規定。
 
-* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之三以上。二、監察委員，為原選舉區之省（市）議會議員總數百分之十以上。三、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之五以上。四、縣（市）長、鄉（鎮、市）長、村、里長，為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
+* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
 
-> 釋：一、為使公職人員罷免提議人數更合理，爰降低國民大會代表、立法委員、省（市）議員提議人數，以增進罷免制度功能，將第一項第一款劃分為一、三兩款。二、原第二款未修正。三、原第三款移列第四款。
+> 釋：罷免案之提議人數修正為原選舉區選舉人總數百分之二以上。
 
 * 71 現役軍人、警察或公務人員不得為罷免案提議人。
 
@@ -294,9 +294,9 @@
 
 * 73 選舉委員會收到罷免案提議後，應於十五日內查對其提議人；如合於規定，即通知提議人之領銜人於十日內領取連署人名冊，並於一定期間內徵求連署。前項提議人有不合規定者刪除，並即通知提議人之領銜人於五日內補足；逾期不予受理。
 
-* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十二以上。二、監察委員，為原選舉區之省（市）議會議員總數百分之二十以上。三、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十五以上。四、縣（市）長、鄉（鎮、市）長，為原選舉區選舉人總數百分之十三以上。五、村、里長，為原選舉區選舉人總數百分之十八以上。
+* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應為原選舉區選舉人總數百分之十三以上。
 
-> 釋：一、參照第七十條之修正意旨降低國民大會代表、立法委員、省（市）議員、縣（市）長、鄉（鎮、市）長之連署人數，以增進罷免制度功能，將第一款國民大會代表、立法委員、省（市）議員連署人數降為百分之十二以上，至縣（市）議員以下選舉維持原人數，並改列為第三款。二、將原第三款縣（市）長、鄉（鎮、市）長連署人數降低為百分之十三以上，並移列為第四款。三、原第三款村（里）長部分維持原標準，並移列第五款。
+> 釋：罷免案之連署人修正為原選舉區選舉人總數百分之十三以上。
 
 * 75 第七十條及第七十四條所稱選舉人總數，以被罷免人當選時原選舉區之選舉人總數為準；所稱選舉人，其年齡及居住期間之計算，以罷免案提出日為準。
 
@@ -318,7 +318,9 @@
 
 * 82 罷免案之投票人及投票、開票，準用本法有關選舉人及投票、開票之規定。
 
-* 83 罷免案投票結果，投票人數應合於左列規定，同意罷免票多於不同意罷免票者，即為通過：一、國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表，應有原選舉區選舉人三分之一以上之投票。二、監察委員，應有原選舉區之省（市）議會全體議員之二分之一以上之投票。三、縣（市）長，鄉（鎮、市）長，村、里長，應有原選舉區選舉人之二分之一以上之投票。投票人數不足前項規定數額或同意罷免票未超過不同意罷免票者，均為否決。
+* 83 罷免案投票人數不足原選舉區選舉人總數二分之一以上或同意罷免票數未超過有效票數二分之一以上者，均為否決。
+
+> 釋：罷免案之最低投票人數規定。
 
 * 84 罷免案經投票後，選舉委員會應於投票完畢七日內公告罷免投票結果。罷免案通過者，被罷免人應自公告之日起，解除職務。
 
