--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -22,6 +22,10 @@
 
 * 12 前條水質水量保護區域內，原有建築物及土地使用，經主管機關會商有關機關認為有貽害水質水量者，得通知所有權人或使用人於一定期間內拆除、改善或改變使用。其所受之損失，由自來水事業補償之。前項補償金額，如雙方不能達成協議時，由主管機關核定之。
 
+* 12.1 水質水量保護區依都市計畫程序劃定為水源特定區者，其土地應視限制程度減免土地增值稅、贈與稅及遺產稅。前項土地減免賦稅區域及標準，由財政部會同內政部擬訂，報請行政院核定。自來水事業應於水價外附徵一定比例之費用，協助第一項土地受限地區地方建設。前項之一定比例及協助地方建設辦法，由主管機管會商有關機關定之。
+
+> 釋：台灣地區水源區民眾因遭劃入水質水量保護區後政府無法予以徵收土地而土地使用有諸多限制，有礙建設繁榮並使生計萎縮，飲水思源，理應協助其地方建設並補貼其禁建、禁墾、禁伐所造成權益受損生計困頓之苦。而水源區之造林保林工作更為保護水源、淨化水質治本之道。
+
 * 13 中央或省（市）主管機關得視自來水之水源分佈、工程建設與社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央或省（市）主管機關得因事實需要修正或變更之。
 
 * 14 在劃定之供水區域內，中央或省（市）主管機關得輔導二個以上自來水事業協議合併經營；如不能獲得協議時，並得以命令行之。
